--- a/DCC_Simple.ioc
+++ b/DCC_Simple.ioc
@@ -60,7 +60,6 @@ PA8.Signal=USB_OTG_FS_SOF
 ETH.PHY_Name=LAN8742A_PHY_ADDRESS
 NVIC.PendSV_IRQn=true\:15\:0\:false\:false\:false\:true\:true\:false
 PC15/OSC32_OUT.Locked=true
-VP_FREERTOS_VS_CMSIS_V1.Mode=CMSIS_V1
 ProjectManager.HalAssertFull=true
 VP_TIM1_VS_ClockSourceINT.Mode=Internal
 PB7.PinState=GPIO_PIN_RESET
@@ -77,7 +76,6 @@ PA14.Locked=true
 NVIC.TimeBaseIP=TIM7
 USART3.IPParameters=VirtualMode-Asynchronous
 PA10.Signal=USB_OTG_FS_ID
-FREERTOS.FootprintOK=true
 PB14.GPIOParameters=GPIO_Speed,PinState,GPIO_PuPd,GPIO_Label,GPIO_ModeDefaultOutputPP
 RCC.APB2CLKDivider=RCC_HCLK_DIV2
 RCC.CECFreq_Value=32786.88524590164
@@ -102,7 +100,7 @@ RCC.PLLQoutputFreq_Value=48000000
 ProjectManager.ProjectFileName=DCC_Simple.ioc
 RCC.ADC12outputFreq_Value=72000000
 TIM1.OCPolarity_2=TIM_OCPOLARITY_LOW
-FREERTOS.Tasks01=defaultTask,0,256,StartDefaultTask,Default,NULL,Dynamic,NULL,NULL;dccTask,2,128,StartDccTask,Default,&dccPacketQueueHandle,Dynamic,NULL,NULL
+FREERTOS.Tasks01=defaultTask,24,256,StartDefaultTask,Default,NULL,Dynamic,NULL,NULL;dccTask,40,128,StartDccTask,Default,&dccPacketQueueHandle,Dynamic,NULL,NULL
 Mcu.PinsNb=35
 PA1.GPIO_Mode=GPIO_MODE_AF_PP
 PE11.GPIO_Speed=GPIO_SPEED_FREQ_HIGH
@@ -145,7 +143,7 @@ Mcu.Pin30=PB7
 RCC.EthernetFreq_Value=216000000
 Mcu.Pin33=VP_SYS_VS_tim7
 Mcu.Pin34=VP_TIM1_VS_ClockSourceINT
-Mcu.Pin31=VP_FREERTOS_VS_CMSIS_V1
+Mcu.Pin31=VP_FREERTOS_VS_CMSIS_V2
 PC1.GPIO_Speed=GPIO_SPEED_FREQ_VERY_HIGH
 Mcu.Pin32=VP_RNG_VS_RNG
 PA9.Locked=true
@@ -202,6 +200,7 @@ PC1.Signal=ETH_MDC
 PG7.GPIOParameters=GPIO_PuPd,GPIO_Label,GPIO_Mode
 PC1.Mode=RMII
 Mcu.Family=STM32F7
+NVIC.USART3_IRQn=true\:10\:0\:true\:false\:true\:true\:true\:true
 ProjectManager.MainLocation=Src
 PA2.GPIO_PuPd=GPIO_NOPULL
 RCC.MCOFreq_Value=72000000
@@ -217,7 +216,7 @@ PC5.Locked=true
 RCC.SYSCLKSourceVirtual=RCC_SYSCLKSOURCE_PLLCLK
 PA7.GPIO_Mode=GPIO_MODE_AF_PP
 PA12.GPIOParameters=GPIO_Speed,GPIO_PuPd,GPIO_Mode
-ProjectManager.functionlistsort=1-MX_GPIO_Init-GPIO-false-HAL-true,2-MX_DMA_Init-DMA-false-HAL-true,3-SystemClock_Config-RCC-false-HAL-false,4-MX_ETH_Init-ETH-false-HAL-true,5-MX_TIM1_Init-TIM1-false-HAL-true,6-MX_USART3_UART_Init-USART3-false-HAL-true,7-MX_USB_OTG_FS_PCD_Init-USB_OTG_FS-false-HAL-true,0-MX_CORTEX_M7_Init-CORTEX_M7-false-HAL-true
+ProjectManager.functionlistsort=1-MX_GPIO_Init-GPIO-false-HAL-true,2-MX_DMA_Init-DMA-false-HAL-true,3-SystemClock_Config-RCC-false-HAL-false,4-MX_ETH_Init-ETH-false-HAL-true,5-MX_TIM1_Init-TIM1-false-HAL-true,6-MX_USART3_UART_Init-USART3-false-HAL-true,7-MX_USB_OTG_FS_PCD_Init-USB_OTG_FS-false-HAL-true,8-MX_RNG_Init-RNG-false-HAL-true,0-MX_CORTEX_M7_Init-CORTEX_M7-false-HAL-true
 PA9.GPIOParameters=GPIO_PuPd,GPIO_Mode
 PA2.GPIO_Speed=GPIO_SPEED_FREQ_VERY_HIGH
 PD9.GPIO_Speed=GPIO_SPEED_FREQ_VERY_HIGH
@@ -237,6 +236,7 @@ PD8.GPIO_PuPd=GPIO_NOPULL
 PD9.Mode=Asynchronous
 PG11.Signal=ETH_TX_EN
 ProjectManager.StackSize=0x400
+VP_FREERTOS_VS_CMSIS_V2.Mode=CMSIS_V2
 Dma.TIM1_CH1.0.MemInc=DMA_MINC_ENABLE
 RCC.I2C3Freq_Value=54000000
 Mcu.IP4=NVIC
@@ -274,7 +274,7 @@ Mcu.Pin7=PA2
 Mcu.Pin8=PA7
 Mcu.Pin9=PC4
 RCC.VCOSAIOutputFreq_Value=384000000
-FREERTOS.IPParameters=Tasks01,Queues01,configUSE_MALLOC_FAILED_HOOK,configCHECK_FOR_STACK_OVERFLOW,configGENERATE_RUN_TIME_STATS,configUSE_TRACE_FACILITY,configUSE_STATS_FORMATTING_FUNCTIONS,INCLUDE_uxTaskGetStackHighWaterMark,FootprintOK
+FREERTOS.IPParameters=Tasks01,Queues01,configUSE_MALLOC_FAILED_HOOK,configCHECK_FOR_STACK_OVERFLOW,configGENERATE_RUN_TIME_STATS,configUSE_TRACE_FACILITY,configUSE_STATS_FORMATTING_FUNCTIONS,INCLUDE_uxTaskGetStackHighWaterMark,configENABLE_BACKWARD_COMPATIBILITY
 RCC.AHBFreq_Value=216000000
 RCC.TIM2Freq_Value=72000000
 Mcu.Pin0=PC13
@@ -292,6 +292,7 @@ Mcu.IP10=USB_OTG_FS
 NVIC.SysTick_IRQn=true\:15\:0\:false\:false\:false\:true\:true\:false
 PG13.GPIO_PuPd=GPIO_NOPULL
 RCC.PLLMUL=RCC_PLL_MUL9
+FREERTOS.configENABLE_BACKWARD_COMPATIBILITY=0
 PG11.GPIO_Speed=GPIO_SPEED_FREQ_VERY_HIGH
 PC4.GPIO_Speed=GPIO_SPEED_FREQ_VERY_HIGH
 RCC.VCOInputFreq_Value=2000000
@@ -352,7 +353,6 @@ PE9.GPIOParameters=GPIO_Speed,GPIO_Label
 Dma.TIM1_CH1.0.PeriphInc=DMA_PINC_DISABLE
 PB0.GPIO_Speed=GPIO_SPEED_FREQ_LOW
 PA13.Signal=SYS_JTMS-SWDIO
-VP_FREERTOS_VS_CMSIS_V1.Signal=FREERTOS_VS_CMSIS_V1
 PA9.Mode=Activate_VBUS
 PB14.PinState=GPIO_PIN_RESET
 SH.S_TIM1_CH1.0=TIM1_CH1,PWM Generation1 CH1
@@ -390,6 +390,7 @@ ProjectManager.AskForMigrate=true
 Mcu.Name=STM32F746ZGTx
 PA2.Signal=ETH_MDIO
 Mcu.IP8=TIM1
+VP_FREERTOS_VS_CMSIS_V2.Signal=FREERTOS_VS_CMSIS_V2
 Mcu.IP9=USART3
 Dma.TIM1_CH1.0.Direction=DMA_MEMORY_TO_PERIPH
 Mcu.IP6=RNG
