DCC Packets corrected. Bit emission corrected. Accpets short/long address and 28/128 address

--- a/DCC_Simple.ioc
+++ b/DCC_Simple.ioc
@@ -1,8 +1,9 @@
 #MicroXplorer Configuration settings - do not modify
 PA11.GPIO_Speed=GPIO_SPEED_FREQ_VERY_HIGH
-FREERTOS.Queues01=dccPacketQueue,20,DCC_Packet *,0,Dynamic,NULL,NULL
+FREERTOS.Queues01=dccPacketQueue,20,DCC_Packet *,0,Dynamic,NULL,NULL;commandQueue,2,char *,0,Dynamic,NULL,NULL
 PB13.GPIOParameters=GPIO_Speed,GPIO_PuPd,GPIO_Mode
 RCC.USART1Freq_Value=108000000
+Dma.USART3_RX.1.Mode=DMA_NORMAL
 RCC.TIM17Freq_Value=72000000
 PG6.PinState=GPIO_PIN_RESET
 PE11.GPIOParameters=GPIO_Speed,GPIO_Label
@@ -29,6 +30,7 @@ PD8.GPIO_ModeDefaultPP=GPIO_MODE_AF_PP
 RCC.LPTIM1Freq_Value=54000000
 PG13.GPIO_Mode=GPIO_MODE_AF_PP
 NVIC.SVCall_IRQn=true\:0\:0\:false\:false\:false\:false\:true\:false
+Dma.USART3_RX.1.Instance=DMA1_Stream1
 PG7.GPIO_Mode=GPIO_MODE_INPUT
 RCC.I2C4Freq_Value=54000000
 PB13.GPIO_Mode=GPIO_MODE_AF_PP
@@ -53,6 +55,7 @@ PB0.GPIOParameters=GPIO_Speed,PinState,GPIO_PuPd,GPIO_Label,GPIO_ModeDefaultOutp
 PG6.GPIO_PuPd=GPIO_NOPULL
 PA1.GPIOParameters=GPIO_Speed,GPIO_PuPd,GPIO_Mode
 ProjectManager.BackupPrevious=false
+Dma.USART3_RX.1.Priority=DMA_PRIORITY_LOW
 TIM1.Channel-PWM\ Generation1\ CH1=TIM_CHANNEL_1
 PE9.Signal=S_TIM1_CH1
 PH1/OSC_OUT.Locked=true
@@ -68,14 +71,17 @@ RCC.PLLMCOFreq_Value=72000000
 RCC.MCO2PinFreq_Value=216000000
 Mcu.Package=LQFP144
 PB14.GPIO_PuPd=GPIO_NOPULL
+Dma.USART3_RX.1.FIFOMode=DMA_FIFOMODE_DISABLE
 RCC.TIM15Freq_Value=72000000
 NVIC.TimeBase=TIM7_IRQn
 PG13.GPIOParameters=GPIO_Speed,GPIO_PuPd,GPIO_Mode
 RCC.ADC34outputFreq_Value=72000000
+Dma.USART3_RX.1.Direction=DMA_PERIPH_TO_MEMORY
 PA14.Locked=true
 NVIC.TimeBaseIP=TIM7
 USART3.IPParameters=VirtualMode-Asynchronous
 PA10.Signal=USB_OTG_FS_ID
+FREERTOS.FootprintOK=true
 PB14.GPIOParameters=GPIO_Speed,PinState,GPIO_PuPd,GPIO_Label,GPIO_ModeDefaultOutputPP
 RCC.APB2CLKDivider=RCC_HCLK_DIV2
 RCC.CECFreq_Value=32786.88524590164
@@ -100,13 +106,14 @@ RCC.PLLQoutputFreq_Value=48000000
 ProjectManager.ProjectFileName=DCC_Simple.ioc
 RCC.ADC12outputFreq_Value=72000000
 TIM1.OCPolarity_2=TIM_OCPOLARITY_LOW
-FREERTOS.Tasks01=defaultTask,24,256,StartDefaultTask,Default,NULL,Dynamic,NULL,NULL;dccTask,40,128,StartDccTask,Default,&dccPacketQueueHandle,Dynamic,NULL,NULL
-Mcu.PinsNb=35
+FREERTOS.Tasks01=defaultTask,24,256,StartDefaultTask,Default,NULL,Dynamic,NULL,NULL;dccTask,40,128,StartDccTask,Default,&dccPacketQueueHandle,Dynamic,NULL,NULL;commandTask,8,128,StartCommandTask,Default,NULL,Dynamic,NULL,NULL
+Mcu.PinsNb=36
 PA1.GPIO_Mode=GPIO_MODE_AF_PP
 PE11.GPIO_Speed=GPIO_SPEED_FREQ_HIGH
 PC13.Locked=true
 PC13.Signal=GPXTI13
 FREERTOS.configCHECK_FOR_STACK_OVERFLOW=0
+Dma.USART3_RX.1.MemDataAlignment=DMA_MDATAALIGN_BYTE
 Dma.TIM1_CH1.0.FIFOMode=DMA_FIFOMODE_DISABLE
 NVIC.DMA2_Stream1_IRQn=true\:5\:0\:false\:false\:true\:true\:false\:true
 RCC.UART8Freq_Value=54000000
@@ -131,41 +138,43 @@ PG6.GPIOParameters=GPIO_Speed,PinState,GPIO_PuPd,GPIO_Label,GPIO_ModeDefaultOutp
 ProjectManager.LastFirmware=true
 PA7.GPIO_Speed=GPIO_SPEED_FREQ_VERY_HIGH
 VP_SYS_VS_tim7.Signal=SYS_VS_tim7
+Dma.USART3_RX.1.RequestParameters=Instance,Direction,PeriphInc,MemInc,PeriphDataAlignment,MemDataAlignment,Mode,Priority,FIFOMode
 PB13.GPIO_PuPd=GPIO_NOPULL
 PA1.Mode=RMII
 PG11.GPIO_Mode=GPIO_MODE_AF_PP
 RCC.PRESCALERUSB=RCC_USBCLKSOURCE_PLL_DIV1_5
+Mcu.Pin35=VP_TIM1_VS_ClockSourceINT
 RCC.I2C1Freq_Value=54000000
 RCC.PLLI2SPCLKFreq_Value=192000000
 PG7.GPIO_Label=USB_In
 RCC.RNGFreq_Value=48000000
-Mcu.Pin30=PB7
+Mcu.Pin30=PB3
 RCC.EthernetFreq_Value=216000000
-Mcu.Pin33=VP_SYS_VS_tim7
-Mcu.Pin34=VP_TIM1_VS_ClockSourceINT
-Mcu.Pin31=VP_FREERTOS_VS_CMSIS_V2
+Mcu.Pin33=VP_RNG_VS_RNG
+Mcu.Pin34=VP_SYS_VS_tim7
+Mcu.Pin31=PB7
 PC1.GPIO_Speed=GPIO_SPEED_FREQ_VERY_HIGH
-Mcu.Pin32=VP_RNG_VS_RNG
+Mcu.Pin32=VP_FREERTOS_VS_CMSIS_V2
 PA9.Locked=true
 NVIC.NonMaskableInt_IRQn=true\:0\:0\:false\:false\:true\:false\:true\:false
 PA13.Mode=Serial_Wire
 ProjectManager.FreePins=true
 RCC.PLLI2SQCLKFreq_Value=192000000
-Mcu.Pin26=PA14
-Mcu.Pin27=PG11
+Mcu.Pin26=PA13
+Mcu.Pin27=PA14
 RCC.RTCHSEDivFreq_Value=4000000
-Mcu.Pin24=PA12
+Mcu.Pin24=PA11
 ProjectManager.UnderRoot=true
-Mcu.Pin25=PA13
+Mcu.Pin25=PA12
 NVIC.TIM1_CC_IRQn=true\:5\:0\:false\:false\:true\:true\:true\:true
-Mcu.Pin28=PG13
-Mcu.Pin29=PB3
-Mcu.Pin22=PA10
+Mcu.Pin28=PG11
+Mcu.Pin29=PG13
+Mcu.Pin22=PA9
 ETH.MediaInterface=ETH_MEDIA_INTERFACE_RMII
-Mcu.Pin23=PA11
+Mcu.Pin23=PA10
 Dma.TIM1_CH1.0.Instance=DMA2_Stream1
-Mcu.Pin20=PA8
-Mcu.Pin21=PA9
+Mcu.Pin20=PG7
+Mcu.Pin21=PA8
 PA10.Locked=true
 NVIC.ForceEnableDMAVector=true
 PC14/OSC32_IN.Locked=true
@@ -175,20 +184,20 @@ PG11.Mode=RMII
 PA11.Signal=USB_OTG_FS_DM
 PC5.GPIO_Mode=GPIO_MODE_AF_PP
 ProjectManager.HeapSize=0x200
-Mcu.Pin15=PB14
+Mcu.Pin15=PB13
 NVIC.HardFault_IRQn=true\:0\:0\:false\:false\:true\:false\:true\:false
-Mcu.Pin16=PD8
-Mcu.Pin13=PE11
-Mcu.Pin14=PB13
-Mcu.Pin19=PG7
+Mcu.Pin16=PB14
+Mcu.Pin13=PE9
+Mcu.Pin14=PE11
+Mcu.Pin19=PG6
 ProjectManager.ComputerToolchain=false
-Mcu.Pin17=PD9
-Mcu.Pin18=PG6
+Mcu.Pin17=PD8
+Mcu.Pin18=PD9
 PD8.GPIO_Speed=GPIO_SPEED_FREQ_VERY_HIGH
 RCC.TIM3Freq_Value=72000000
 NVIC.PriorityGroup=NVIC_PRIORITYGROUP_4
 Mcu.Pin11=PB0
-Mcu.Pin12=PE9
+Mcu.Pin12=PF15
 PC5.GPIO_Speed=GPIO_SPEED_FREQ_VERY_HIGH
 Mcu.Pin10=PC5
 PC15/OSC32_OUT.Signal=RCC_OSC32_OUT
@@ -224,7 +233,7 @@ PA11.GPIOParameters=GPIO_Speed,GPIO_PuPd,GPIO_Mode
 Dma.TIM1_CH1.0.MemDataAlignment=DMA_MDATAALIGN_WORD
 PA11.Mode=Device_Only
 PE9.GPIO_Speed=GPIO_SPEED_FREQ_HIGH
-PB0.GPIO_Label=LD_Green
+PB0.GPIO_Label=LED_Green
 PC14/OSC32_IN.Mode=LSE-External-Oscillator
 RCC.PLLI2SRCLKFreq_Value=192000000
 RCC.USART2Freq_Value=54000000
@@ -249,6 +258,7 @@ PA12.Locked=true
 Mcu.IP1=DMA
 PA12.Signal=USB_OTG_FS_DP
 TIM1.Prescaler=0
+Dma.USART3_RX.1.MemInc=DMA_MINC_ENABLE
 Mcu.UserConstants=DCC_ZERO_ARR,43200;DCC_ZERO_CCR,21600;DCC_ONE_ARR,25058;DCC_ONE_CCR,12529;DCC_QUEUE_LEN,20
 PC1.GPIOParameters=GPIO_Speed,GPIO_PuPd,GPIO_Mode
 RCC.SDMMCFreq_Value=216000000
@@ -264,6 +274,7 @@ Mcu.IPNb=11
 RCC.I2SClocksFreq_Value=48000000
 RCC.PLLI2SRoutputFreq_Value=192000000
 ProjectManager.PreviousToolchain=STM32CubeIDE
+Dma.USART3_RX.1.PeriphDataAlignment=DMA_PDATAALIGN_BYTE
 RCC.SPDIFRXFreq_Value=192000000
 RCC.VcooutputI2S=48000000
 PD8.GPIOParameters=GPIO_ModeDefaultPP,GPIO_Speed,GPIO_PuPd
@@ -274,7 +285,7 @@ Mcu.Pin7=PA2
 Mcu.Pin8=PA7
 Mcu.Pin9=PC4
 RCC.VCOSAIOutputFreq_Value=384000000
-FREERTOS.IPParameters=Tasks01,Queues01,configUSE_MALLOC_FAILED_HOOK,configCHECK_FOR_STACK_OVERFLOW,configGENERATE_RUN_TIME_STATS,configUSE_TRACE_FACILITY,configUSE_STATS_FORMATTING_FUNCTIONS,INCLUDE_uxTaskGetStackHighWaterMark,configENABLE_BACKWARD_COMPATIBILITY
+FREERTOS.IPParameters=Tasks01,Queues01,configUSE_MALLOC_FAILED_HOOK,configCHECK_FOR_STACK_OVERFLOW,configGENERATE_RUN_TIME_STATS,configUSE_TRACE_FACILITY,configUSE_STATS_FORMATTING_FUNCTIONS,INCLUDE_uxTaskGetStackHighWaterMark,configENABLE_BACKWARD_COMPATIBILITY,FootprintOK
 RCC.AHBFreq_Value=216000000
 RCC.TIM2Freq_Value=72000000
 Mcu.Pin0=PC13
@@ -303,7 +314,7 @@ PG7.GPIO_PuPd=GPIO_NOPULL
 PB7.Signal=GPIO_Output
 PG13.Mode=RMII
 PH1/OSC_OUT.Mode=HSE-External-Clock-Source
-Dma.RequestsNb=1
+Dma.RequestsNb=2
 PB0.Locked=true
 ProjectManager.ProjectName=DCC_Simple
 PG6.GPIO_ModeDefaultOutputPP=GPIO_MODE_OUTPUT_PP
@@ -317,10 +328,12 @@ RCC.LSI_VALUE=32000
 USB_OTG_FS.VirtualMode=Device_Only
 PA10.GPIO_Speed=GPIO_SPEED_FREQ_VERY_HIGH
 RCC.TIM16Freq_Value=72000000
+Dma.Request1=USART3_RX
 PC4.Locked=true
 PG13.GPIO_Speed=GPIO_SPEED_FREQ_VERY_HIGH
 PC5.Signal=ETH_RXD1
 Dma.Request0=TIM1_CH1
+PF15.GPIOParameters=GPIO_Label
 NVIC.TIM7_IRQn=true\:0\:0\:false\:false\:true\:false\:false\:true
 PA12.GPIO_Speed=GPIO_SPEED_FREQ_VERY_HIGH
 PB3.Locked=true
@@ -337,6 +350,7 @@ VP_SYS_VS_tim7.Mode=TIM7
 PC4.Signal=ETH_RXD0
 ProjectManager.DefaultFWLocation=true
 PD9.Signal=USART3_RX
+NVIC.DMA1_Stream1_IRQn=true\:5\:0\:false\:false\:true\:true\:false\:true
 ProjectManager.DeletePrevious=true
 VP_RNG_VS_RNG.Mode=RNG_Activate
 RCC.LCDTFToutputFreq_Value=96000000
@@ -350,8 +364,8 @@ Dma.TIM1_CH1.0.Priority=DMA_PRIORITY_HIGH
 FREERTOS.INCLUDE_uxTaskGetStackHighWaterMark=1
 PA10.GPIO_Mode=GPIO_MODE_AF_PP
 PE9.GPIOParameters=GPIO_Speed,GPIO_Label
-Dma.TIM1_CH1.0.PeriphInc=DMA_PINC_DISABLE
 PB0.GPIO_Speed=GPIO_SPEED_FREQ_LOW
+Dma.TIM1_CH1.0.PeriphInc=DMA_PINC_DISABLE
 PA13.Signal=SYS_JTMS-SWDIO
 PA9.Mode=Activate_VBUS
 PB14.PinState=GPIO_PIN_RESET
@@ -361,6 +375,7 @@ FREERTOS.configUSE_TRACE_FACILITY=1
 PB7.GPIOParameters=GPIO_Speed,PinState,GPIO_PuPd,GPIO_Label,GPIO_ModeDefaultOutputPP
 VP_RNG_VS_RNG.Signal=RNG_VS_RNG
 PC5.GPIOParameters=GPIO_Speed,GPIO_PuPd,GPIO_Mode
+PF15.Locked=true
 RCC.USBFreq_Value=48000000
 RCC.PLLSAIoutputFreq_Value=192000000
 PE11.Signal=S_TIM1_CH2
@@ -384,6 +399,8 @@ PC13.GPIOParameters=GPIO_PuPd,GPIO_Label,GPIO_ModeDefaultEXTI
 PB7.GPIO_ModeDefaultOutputPP=GPIO_MODE_OUTPUT_PP
 PA1.GPIO_Speed=GPIO_SPEED_FREQ_VERY_HIGH
 PA10.GPIOParameters=GPIO_Speed,GPIO_PuPd,GPIO_Mode
+PF15.GPIO_Label=ENABLE_A
+PF15.Signal=GPIO_Output
 RCC.UART5Freq_Value=54000000
 RCC.IPParameters=48MHZClocksFreq_Value,ADC12outputFreq_Value,ADC34outputFreq_Value,AHBFreq_Value,APB1CLKDivider,APB1Freq_Value,APB1TimFreq_Value,APB2CLKDivider,APB2Freq_Value,APB2TimFreq_Value,CECFreq_Value,CortexFreq_Value,EthernetFreq_Value,FCLKCortexFreq_Value,FamilyName,HCLKFreq_Value,HSE_VALUE,HSI_VALUE,I2C1Freq_Value,I2C2Freq_Value,I2C3Freq_Value,I2C4Freq_Value,I2SClocksFreq_Value,I2SFreq_Value,LCDTFToutputFreq_Value,LPTIM1Freq_Value,LSI_VALUE,MCO1PinFreq_Value,MCO2PinFreq_Value,MCOFreq_Value,PLLCLKFreq_Value,PLLI2SPCLKFreq_Value,PLLI2SQCLKFreq_Value,PLLI2SRCLKFreq_Value,PLLI2SRoutputFreq_Value,PLLM,PLLMCOFreq_Value,PLLMUL,PLLN,PLLQ,PLLQCLKFreq_Value,PLLQoutputFreq_Value,PLLSAIPCLKFreq_Value,PLLSAIQCLKFreq_Value,PLLSAIRCLKFreq_Value,PLLSAIoutputFreq_Value,PRESCALERUSB,RNGFreq_Value,RTCFreq_Value,RTCHSEDivFreq_Value,SAI1Freq_Value,SAI2Freq_Value,SDMMCFreq_Value,SPDIFRXFreq_Value,SYSCLKFreq_VALUE,SYSCLKSource,SYSCLKSourceVirtual,TIM15Freq_Value,TIM16Freq_Value,TIM17Freq_Value,TIM1Freq_Value,TIM20Freq_Value,TIM2Freq_Value,TIM3Freq_Value,TIM8Freq_Value,UART4Freq_Value,UART5Freq_Value,UART7Freq_Value,UART8Freq_Value,USART1Freq_Value,USART2Freq_Value,USART3Freq_Value,USART6Freq_Value,USBFreq_Value,VCOI2SOutputFreq_Value,VCOInputFreq_Value,VCOOutput2Freq_Value,VCOOutputFreq_Value,VCOSAIOutputFreq_Value,VcooutputI2S,WatchDogFreq_Value
 ProjectManager.AskForMigrate=true
@@ -422,5 +439,6 @@ RCC.APB1Freq_Value=54000000
 ProjectManager.DeviceId=STM32F746ZGTx
 ProjectManager.LibraryCopy=1
 PB0.GPIO_PuPd=GPIO_NOPULL
+Dma.USART3_RX.1.PeriphInc=DMA_PINC_DISABLE
 PG11.GPIOParameters=GPIO_Speed,GPIO_PuPd,GPIO_Mode
 PA7.Signal=ETH_CRS_DV
