--- a/DCC_Simple.ioc
+++ b/DCC_Simple.ioc
@@ -3,7 +3,6 @@ PA11.GPIO_Speed=GPIO_SPEED_FREQ_VERY_HIGH
 FREERTOS.Queues01=dccPacketQueue,20,DCC_Packet *,0,Dynamic,NULL,NULL;commandQueue,2,char *,0,Dynamic,NULL,NULL
 PB13.GPIOParameters=GPIO_Speed,GPIO_PuPd,GPIO_Mode
 RCC.USART1Freq_Value=108000000
-Dma.USART3_RX.1.Mode=DMA_NORMAL
 RCC.TIM17Freq_Value=72000000
 PG6.PinState=GPIO_PIN_RESET
 PE11.GPIOParameters=GPIO_Speed,GPIO_Label
@@ -14,8 +13,10 @@ RCC.PLLCLKFreq_Value=216000000
 PB14.GPIO_Label=LED_Red
 PG6.GPIO_Label=USB_Out
 RCC.PLLQCLKFreq_Value=48000000
+Dma.USART3_TX.1.PeriphDataAlignment=DMA_PDATAALIGN_BYTE
 PD8.Locked=true
 RCC.RTCFreq_Value=32000
+Dma.USART3_TX.1.Instance=DMA1_Stream3
 PC5.Mode=RMII
 SH.S_TIM1_CH1.ConfNb=1
 PB13.Signal=ETH_TXD1
@@ -30,7 +31,6 @@ PD8.GPIO_ModeDefaultPP=GPIO_MODE_AF_PP
 RCC.LPTIM1Freq_Value=54000000
 PG13.GPIO_Mode=GPIO_MODE_AF_PP
 NVIC.SVCall_IRQn=true\:0\:0\:false\:false\:false\:false\:true\:false
-Dma.USART3_RX.1.Instance=DMA1_Stream1
 PG7.GPIO_Mode=GPIO_MODE_INPUT
 RCC.I2C4Freq_Value=54000000
 PB13.GPIO_Mode=GPIO_MODE_AF_PP
@@ -55,7 +55,6 @@ PB0.GPIOParameters=GPIO_Speed,PinState,GPIO_PuPd,GPIO_Label,GPIO_ModeDefaultOutp
 PG6.GPIO_PuPd=GPIO_NOPULL
 PA1.GPIOParameters=GPIO_Speed,GPIO_PuPd,GPIO_Mode
 ProjectManager.BackupPrevious=false
-Dma.USART3_RX.1.Priority=DMA_PRIORITY_LOW
 TIM1.Channel-PWM\ Generation1\ CH1=TIM_CHANNEL_1
 PE9.Signal=S_TIM1_CH1
 PH1/OSC_OUT.Locked=true
@@ -65,18 +64,18 @@ NVIC.PendSV_IRQn=true\:15\:0\:false\:false\:false\:true\:true\:false
 PC15/OSC32_OUT.Locked=true
 ProjectManager.HalAssertFull=true
 VP_TIM1_VS_ClockSourceINT.Mode=Internal
+Dma.USART3_TX.1.FIFOMode=DMA_FIFOMODE_DISABLE
+Dma.USART3_TX.1.Priority=DMA_PRIORITY_LOW
 PB7.PinState=GPIO_PIN_RESET
 RCC.TIM1Freq_Value=72000000
 RCC.PLLMCOFreq_Value=72000000
 RCC.MCO2PinFreq_Value=216000000
 Mcu.Package=LQFP144
 PB14.GPIO_PuPd=GPIO_NOPULL
-Dma.USART3_RX.1.FIFOMode=DMA_FIFOMODE_DISABLE
 RCC.TIM15Freq_Value=72000000
 NVIC.TimeBase=TIM7_IRQn
 PG13.GPIOParameters=GPIO_Speed,GPIO_PuPd,GPIO_Mode
 RCC.ADC34outputFreq_Value=72000000
-Dma.USART3_RX.1.Direction=DMA_PERIPH_TO_MEMORY
 PA14.Locked=true
 NVIC.TimeBaseIP=TIM7
 USART3.IPParameters=VirtualMode-Asynchronous
@@ -92,6 +91,7 @@ PB0.GPIO_ModeDefaultOutputPP=GPIO_MODE_OUTPUT_PP
 TIM1.Period=DCC_ONE_ARR
 USB_OTG_FS.IPParameters=VirtualMode
 PB13.Mode=RMII
+Dma.USART3_TX.1.PeriphInc=DMA_PINC_DISABLE
 PA12.GPIO_PuPd=GPIO_NOPULL
 PD9.GPIO_PuPd=GPIO_NOPULL
 PA8.GPIO_Speed=GPIO_SPEED_FREQ_VERY_HIGH
@@ -101,7 +101,9 @@ PC4.Mode=RMII
 RCC.PLLSAIQCLKFreq_Value=192000000
 PG6.GPIO_Speed=GPIO_SPEED_FREQ_LOW
 PA2.GPIO_Mode=GPIO_MODE_AF_PP
+Dma.USART3_RX.0.Instance=DMA1_Stream1
 PB7.GPIO_PuPd=GPIO_NOPULL
+Dma.USART3_TX.1.MemDataAlignment=DMA_MDATAALIGN_BYTE
 RCC.PLLQoutputFreq_Value=48000000
 ProjectManager.ProjectFileName=DCC_Simple.ioc
 RCC.ADC12outputFreq_Value=72000000
@@ -113,9 +115,6 @@ PE11.GPIO_Speed=GPIO_SPEED_FREQ_HIGH
 PC13.Locked=true
 PC13.Signal=GPXTI13
 FREERTOS.configCHECK_FOR_STACK_OVERFLOW=0
-Dma.USART3_RX.1.MemDataAlignment=DMA_MDATAALIGN_BYTE
-Dma.TIM1_CH1.0.FIFOMode=DMA_FIFOMODE_DISABLE
-NVIC.DMA2_Stream1_IRQn=true\:5\:0\:false\:false\:true\:true\:false\:true
 RCC.UART8Freq_Value=54000000
 PB14.Locked=true
 RCC.APB1CLKDivider=RCC_HCLK_DIV4
@@ -124,7 +123,6 @@ ETH.IPParameters=MediaInterface,PHY_Name,PHY_Value,PhyAddress
 RCC.WatchDogFreq_Value=32000
 TIM1.AutoReloadPreload=TIM_AUTORELOAD_PRELOAD_ENABLE
 PA11.Locked=true
-Dma.TIM1_CH1.0.Mode=DMA_CIRCULAR
 PB14.GPIO_Speed=GPIO_SPEED_FREQ_LOW
 RCC.USART6Freq_Value=108000000
 PA9.Signal=USB_OTG_FS_VBUS
@@ -138,7 +136,6 @@ PG6.GPIOParameters=GPIO_Speed,PinState,GPIO_PuPd,GPIO_Label,GPIO_ModeDefaultOutp
 ProjectManager.LastFirmware=true
 PA7.GPIO_Speed=GPIO_SPEED_FREQ_VERY_HIGH
 VP_SYS_VS_tim7.Signal=SYS_VS_tim7
-Dma.USART3_RX.1.RequestParameters=Instance,Direction,PeriphInc,MemInc,PeriphDataAlignment,MemDataAlignment,Mode,Priority,FIFOMode
 PB13.GPIO_PuPd=GPIO_NOPULL
 PA1.Mode=RMII
 PG11.GPIO_Mode=GPIO_MODE_AF_PP
@@ -172,7 +169,6 @@ Mcu.Pin29=PG13
 Mcu.Pin22=PA9
 ETH.MediaInterface=ETH_MEDIA_INTERFACE_RMII
 Mcu.Pin23=PA10
-Dma.TIM1_CH1.0.Instance=DMA2_Stream1
 Mcu.Pin20=PG7
 Mcu.Pin21=PA8
 PA10.Locked=true
@@ -213,6 +209,7 @@ NVIC.USART3_IRQn=true\:10\:0\:true\:false\:true\:true\:true\:true
 ProjectManager.MainLocation=Src
 PA2.GPIO_PuPd=GPIO_NOPULL
 RCC.MCOFreq_Value=72000000
+Dma.USART3_RX.0.PeriphInc=DMA_PINC_DISABLE
 RCC.SAI1Freq_Value=192000000
 RCC.CortexFreq_Value=216000000
 PG6.Signal=GPIO_Output
@@ -220,6 +217,7 @@ ProjectManager.KeepUserCode=true
 Mcu.UserName=STM32F746ZGTx
 PD9.GPIOParameters=GPIO_ModeDefaultPP,GPIO_Speed,GPIO_PuPd
 PE11.GPIO_Label=DCC_L
+Dma.USART3_TX.1.MemInc=DMA_MINC_ENABLE
 PG6.Locked=true
 PC5.Locked=true
 RCC.SYSCLKSourceVirtual=RCC_SYSCLKSOURCE_PLLCLK
@@ -230,7 +228,6 @@ PA9.GPIOParameters=GPIO_PuPd,GPIO_Mode
 PA2.GPIO_Speed=GPIO_SPEED_FREQ_VERY_HIGH
 PD9.GPIO_Speed=GPIO_SPEED_FREQ_VERY_HIGH
 PA11.GPIOParameters=GPIO_Speed,GPIO_PuPd,GPIO_Mode
-Dma.TIM1_CH1.0.MemDataAlignment=DMA_MDATAALIGN_WORD
 PA11.Mode=Device_Only
 PE9.GPIO_Speed=GPIO_SPEED_FREQ_HIGH
 PB0.GPIO_Label=LED_Green
@@ -246,7 +243,6 @@ PD9.Mode=Asynchronous
 PG11.Signal=ETH_TX_EN
 ProjectManager.StackSize=0x400
 VP_FREERTOS_VS_CMSIS_V2.Mode=CMSIS_V2
-Dma.TIM1_CH1.0.MemInc=DMA_MINC_ENABLE
 RCC.I2C3Freq_Value=54000000
 Mcu.IP4=NVIC
 Mcu.IP5=RCC
@@ -258,7 +254,6 @@ PA12.Locked=true
 Mcu.IP1=DMA
 PA12.Signal=USB_OTG_FS_DP
 TIM1.Prescaler=0
-Dma.USART3_RX.1.MemInc=DMA_MINC_ENABLE
 Mcu.UserConstants=DCC_ZERO_ARR,43200;DCC_ZERO_CCR,21600;DCC_ONE_ARR,25058;DCC_ONE_CCR,12529;DCC_QUEUE_LEN,20
 PC1.GPIOParameters=GPIO_Speed,GPIO_PuPd,GPIO_Mode
 RCC.SDMMCFreq_Value=216000000
@@ -274,7 +269,6 @@ Mcu.IPNb=11
 RCC.I2SClocksFreq_Value=48000000
 RCC.PLLI2SRoutputFreq_Value=192000000
 ProjectManager.PreviousToolchain=STM32CubeIDE
-Dma.USART3_RX.1.PeriphDataAlignment=DMA_PDATAALIGN_BYTE
 RCC.SPDIFRXFreq_Value=192000000
 RCC.VcooutputI2S=48000000
 PD8.GPIOParameters=GPIO_ModeDefaultPP,GPIO_Speed,GPIO_PuPd
@@ -298,7 +292,9 @@ Mcu.Pin3=PH0/OSC_IN
 Mcu.Pin4=PH1/OSC_OUT
 Mcu.Pin5=PC1
 RCC.HSE_VALUE=8000000
+Dma.USART3_RX.0.MemDataAlignment=DMA_MDATAALIGN_BYTE
 NVIC.DebugMonitor_IRQn=true\:0\:0\:false\:false\:true\:false\:true\:false
+Dma.USART3_TX.1.Mode=DMA_NORMAL
 Mcu.IP10=USB_OTG_FS
 NVIC.SysTick_IRQn=true\:15\:0\:false\:false\:false\:true\:true\:false
 PG13.GPIO_PuPd=GPIO_NOPULL
@@ -309,9 +305,11 @@ PC4.GPIO_Speed=GPIO_SPEED_FREQ_VERY_HIGH
 RCC.VCOInputFreq_Value=2000000
 PA14.Mode=Serial_Wire
 File.Version=6
+Dma.USART3_RX.0.PeriphDataAlignment=DMA_PDATAALIGN_BYTE
 PC13.GPIO_PuPd=GPIO_NOPULL
 PG7.GPIO_PuPd=GPIO_NOPULL
 PB7.Signal=GPIO_Output
+Dma.USART3_RX.0.FIFOMode=DMA_FIFOMODE_DISABLE
 PG13.Mode=RMII
 PH1/OSC_OUT.Mode=HSE-External-Clock-Source
 Dma.RequestsNb=2
@@ -319,6 +317,7 @@ PB0.Locked=true
 ProjectManager.ProjectName=DCC_Simple
 PG6.GPIO_ModeDefaultOutputPP=GPIO_MODE_OUTPUT_PP
 PB7.GPIO_Label=LED_Blue
+Dma.USART3_RX.0.Direction=DMA_PERIPH_TO_MEMORY
 PA7.Locked=true
 PG11.Locked=true
 TIM1.Pulse-PWM\ Generation2\ CH2=DCC_ONE_CCR
@@ -326,13 +325,15 @@ PC14/OSC32_IN.Signal=RCC_OSC32_IN
 ProjectManager.ToolChainLocation=
 RCC.LSI_VALUE=32000
 USB_OTG_FS.VirtualMode=Device_Only
+Dma.USART3_RX.0.MemInc=DMA_MINC_ENABLE
 PA10.GPIO_Speed=GPIO_SPEED_FREQ_VERY_HIGH
 RCC.TIM16Freq_Value=72000000
-Dma.Request1=USART3_RX
+Dma.Request1=USART3_TX
 PC4.Locked=true
 PG13.GPIO_Speed=GPIO_SPEED_FREQ_VERY_HIGH
 PC5.Signal=ETH_RXD1
-Dma.Request0=TIM1_CH1
+Dma.Request0=USART3_RX
+Dma.USART3_RX.0.RequestParameters=Instance,Direction,PeriphInc,MemInc,PeriphDataAlignment,MemDataAlignment,Mode,Priority,FIFOMode
 PF15.GPIOParameters=GPIO_Label
 NVIC.TIM7_IRQn=true\:0\:0\:false\:false\:true\:false\:false\:true
 PA12.GPIO_Speed=GPIO_SPEED_FREQ_VERY_HIGH
@@ -357,21 +358,20 @@ RCC.LCDTFToutputFreq_Value=96000000
 PC5.GPIO_PuPd=GPIO_NOPULL
 boardIOC=true
 PA9.GPIO_PuPd=GPIO_NOPULL
-Dma.TIM1_CH1.0.PeriphDataAlignment=DMA_PDATAALIGN_WORD
 ETH.PhyAddress=0
 RCC.FamilyName=M
-Dma.TIM1_CH1.0.Priority=DMA_PRIORITY_HIGH
+Dma.USART3_RX.0.Mode=DMA_NORMAL
 FREERTOS.INCLUDE_uxTaskGetStackHighWaterMark=1
 PA10.GPIO_Mode=GPIO_MODE_AF_PP
 PE9.GPIOParameters=GPIO_Speed,GPIO_Label
 PB0.GPIO_Speed=GPIO_SPEED_FREQ_LOW
-Dma.TIM1_CH1.0.PeriphInc=DMA_PINC_DISABLE
 PA13.Signal=SYS_JTMS-SWDIO
 PA9.Mode=Activate_VBUS
 PB14.PinState=GPIO_PIN_RESET
 SH.S_TIM1_CH1.0=TIM1_CH1,PWM Generation1 CH1
 ProjectManager.TargetToolchain=STM32CubeIDE
 FREERTOS.configUSE_TRACE_FACILITY=1
+Dma.USART3_TX.1.RequestParameters=Instance,Direction,PeriphInc,MemInc,PeriphDataAlignment,MemDataAlignment,Mode,Priority,FIFOMode
 PB7.GPIOParameters=GPIO_Speed,PinState,GPIO_PuPd,GPIO_Label,GPIO_ModeDefaultOutputPP
 VP_RNG_VS_RNG.Signal=RNG_VS_RNG
 PC5.GPIOParameters=GPIO_Speed,GPIO_PuPd,GPIO_Mode
@@ -409,13 +409,13 @@ PA2.Signal=ETH_MDIO
 Mcu.IP8=TIM1
 VP_FREERTOS_VS_CMSIS_V2.Signal=FREERTOS_VS_CMSIS_V2
 Mcu.IP9=USART3
-Dma.TIM1_CH1.0.Direction=DMA_MEMORY_TO_PERIPH
 Mcu.IP6=RNG
 Mcu.IP7=SYS
 ProjectManager.CoupleFile=true
 RCC.48MHZClocksFreq_Value=24000000
 PB3.Signal=SYS_JTDO-SWO
 RCC.SYSCLKFreq_VALUE=216000000
+Dma.USART3_RX.0.Priority=DMA_PRIORITY_LOW
 PA1.Locked=true
 PA12.Mode=Device_Only
 KeepUserPlacement=false
@@ -427,18 +427,18 @@ RCC.TIM20Freq_Value=72000000
 RCC.HSI_VALUE=16000000
 PA8.GPIO_PuPd=GPIO_NOPULL
 RCC.PLLQ=9
+Dma.USART3_TX.1.Direction=DMA_MEMORY_TO_PERIPH
 RCC.PLLM=4
 RCC.PLLN=216
 TIM1.OCMode_PWM-PWM\ Generation2\ CH2=TIM_OCMODE_PWM1
 PB7.Locked=true
 PA2.Mode=RMII
-Dma.TIM1_CH1.0.RequestParameters=Instance,Direction,PeriphInc,MemInc,PeriphDataAlignment,MemDataAlignment,Mode,Priority,FIFOMode
+NVIC.DMA1_Stream3_IRQn=true\:5\:0\:false\:false\:true\:true\:false\:true
 PA11.GPIO_Mode=GPIO_MODE_AF_PP
 PD9.Locked=true
 RCC.APB1Freq_Value=54000000
 ProjectManager.DeviceId=STM32F746ZGTx
 ProjectManager.LibraryCopy=1
 PB0.GPIO_PuPd=GPIO_NOPULL
-Dma.USART3_RX.1.PeriphInc=DMA_PINC_DISABLE
 PG11.GPIOParameters=GPIO_Speed,GPIO_PuPd,GPIO_Mode
 PA7.Signal=ETH_CRS_DV
