WIP: Register all DccPlusPlus commands (they do nothing)
Signed-off-by: Evili del Rio <evili.del.rio@gmail.com>

--- a/DCC_Simple.ioc
+++ b/DCC_Simple.ioc
@@ -19,6 +19,7 @@ RCC.RTCFreq_Value=32000
 Dma.USART3_TX.1.Instance=DMA1_Stream3
 PC5.Mode=RMII
 SH.S_TIM1_CH1.ConfNb=1
+SH.S_TIM4_CH4.ConfNb=1
 PB13.Signal=ETH_TXD1
 PG13.Signal=ETH_TXD0
 PA2.GPIOParameters=GPIO_Speed,GPIO_PuPd,GPIO_Mode
@@ -31,6 +32,8 @@ PD8.GPIO_ModeDefaultPP=GPIO_MODE_AF_PP
 RCC.LPTIM1Freq_Value=54000000
 PG13.GPIO_Mode=GPIO_MODE_AF_PP
 NVIC.SVCall_IRQn=true\:0\:0\:false\:false\:false\:false\:true\:false
+PD14.GPIO_Speed=GPIO_SPEED_FREQ_HIGH
+PD15.GPIOParameters=GPIO_Speed,GPIO_Label
 PG7.GPIO_Mode=GPIO_MODE_INPUT
 RCC.I2C4Freq_Value=54000000
 PB13.GPIO_Mode=GPIO_MODE_AF_PP
@@ -44,6 +47,7 @@ PB13.Locked=true
 RCC.USART3Freq_Value=54000000
 RCC.PLLSAIRCLKFreq_Value=192000000
 ProjectManager.ProjectBuild=false
+TIM4.Channel-PWM\ Generation3\ CH3=TIM_CHANNEL_3
 PG13.Locked=true
 NVIC.UsageFault_IRQn=true\:0\:0\:false\:false\:true\:false\:true\:false
 PA8.Locked=true
@@ -93,8 +97,10 @@ USB_OTG_FS.IPParameters=VirtualMode
 PB13.Mode=RMII
 Dma.USART3_TX.1.PeriphInc=DMA_PINC_DISABLE
 PA12.GPIO_PuPd=GPIO_NOPULL
+TIM4.Channel-PWM\ Generation4\ CH4=TIM_CHANNEL_4
 PD9.GPIO_PuPd=GPIO_NOPULL
 PA8.GPIO_Speed=GPIO_SPEED_FREQ_VERY_HIGH
+PD15.Signal=S_TIM4_CH4
 ProjectManager.CustomerFirmwarePackage=
 PC4.GPIOParameters=GPIO_Speed,GPIO_PuPd,GPIO_Mode
 PC4.Mode=RMII
@@ -109,7 +115,7 @@ ProjectManager.ProjectFileName=DCC_Simple.ioc
 RCC.ADC12outputFreq_Value=72000000
 TIM1.OCPolarity_2=TIM_OCPOLARITY_LOW
 FREERTOS.Tasks01=defaultTask,24,256,StartDefaultTask,Default,NULL,Dynamic,NULL,NULL;dccTask,40,128,StartDccTask,Default,&dccPacketQueueHandle,Dynamic,NULL,NULL;commandTask,8,128,StartCommandTask,Default,NULL,Dynamic,NULL,NULL
-Mcu.PinsNb=36
+Mcu.PinsNb=39
 PA1.GPIO_Mode=GPIO_MODE_AF_PP
 PE11.GPIO_Speed=GPIO_SPEED_FREQ_HIGH
 PC13.Locked=true
@@ -124,12 +130,13 @@ RCC.WatchDogFreq_Value=32000
 TIM1.AutoReloadPreload=TIM_AUTORELOAD_PRELOAD_ENABLE
 PA11.Locked=true
 PB14.GPIO_Speed=GPIO_SPEED_FREQ_LOW
+TIM4.IPParameters=Channel-PWM Generation3 CH3,Channel-PWM Generation4 CH4
 RCC.USART6Freq_Value=108000000
 PA9.Signal=USB_OTG_FS_VBUS
 VP_TIM1_VS_ClockSourceINT.Signal=TIM1_VS_ClockSourceINT
 TIM1.Channel-PWM\ Generation2\ CH2=TIM_CHANNEL_2
 PB13.GPIO_Speed=GPIO_SPEED_FREQ_VERY_HIGH
-PE9.GPIO_Label=DCC_K
+PE9.GPIO_Label=DCC_MAIN_K
 PD8.Mode=Asynchronous
 PB14.Signal=GPIO_Output
 PG6.GPIOParameters=GPIO_Speed,PinState,GPIO_PuPd,GPIO_Label,GPIO_ModeDefaultOutputPP
@@ -139,38 +146,42 @@ VP_SYS_VS_tim7.Signal=SYS_VS_tim7
 PB13.GPIO_PuPd=GPIO_NOPULL
 PA1.Mode=RMII
 PG11.GPIO_Mode=GPIO_MODE_AF_PP
+Mcu.Pin37=VP_TIM1_VS_ClockSourceINT
+Mcu.Pin38=VP_TIM4_VS_ClockSourceINT
 RCC.PRESCALERUSB=RCC_USBCLKSOURCE_PLL_DIV1_5
-Mcu.Pin35=VP_TIM1_VS_ClockSourceINT
+Mcu.Pin35=VP_RNG_VS_RNG
 RCC.I2C1Freq_Value=54000000
+Mcu.Pin36=VP_SYS_VS_tim7
 RCC.PLLI2SPCLKFreq_Value=192000000
 PG7.GPIO_Label=USB_In
 RCC.RNGFreq_Value=48000000
-Mcu.Pin30=PB3
+Mcu.Pin30=PG11
 RCC.EthernetFreq_Value=216000000
-Mcu.Pin33=VP_RNG_VS_RNG
-Mcu.Pin34=VP_SYS_VS_tim7
-Mcu.Pin31=PB7
+Mcu.Pin33=PB7
+Mcu.Pin34=VP_FREERTOS_VS_CMSIS_V2
+Mcu.Pin31=PG13
 PC1.GPIO_Speed=GPIO_SPEED_FREQ_VERY_HIGH
-Mcu.Pin32=VP_FREERTOS_VS_CMSIS_V2
+Mcu.Pin32=PB3
 PA9.Locked=true
 NVIC.NonMaskableInt_IRQn=true\:0\:0\:false\:false\:true\:false\:true\:false
 PA13.Mode=Serial_Wire
 ProjectManager.FreePins=true
 RCC.PLLI2SQCLKFreq_Value=192000000
-Mcu.Pin26=PA13
-Mcu.Pin27=PA14
+Mcu.Pin26=PA11
+Mcu.Pin27=PA12
 RCC.RTCHSEDivFreq_Value=4000000
-Mcu.Pin24=PA11
+Mcu.Pin24=PA9
 ProjectManager.UnderRoot=true
-Mcu.Pin25=PA12
+Mcu.Pin25=PA10
 NVIC.TIM1_CC_IRQn=true\:5\:0\:false\:false\:true\:true\:true\:true
-Mcu.Pin28=PG11
-Mcu.Pin29=PG13
-Mcu.Pin22=PA9
+Mcu.Pin28=PA13
+Mcu.Pin29=PA14
+PD14.GPIOParameters=GPIO_Speed,GPIO_Label
+Mcu.Pin22=PG7
 ETH.MediaInterface=ETH_MEDIA_INTERFACE_RMII
-Mcu.Pin23=PA10
-Mcu.Pin20=PG7
-Mcu.Pin21=PA8
+Mcu.Pin23=PA8
+Mcu.Pin20=PD15
+Mcu.Pin21=PG6
 PA10.Locked=true
 NVIC.ForceEnableDMAVector=true
 PC14/OSC32_IN.Locked=true
@@ -185,12 +196,13 @@ NVIC.HardFault_IRQn=true\:0\:0\:false\:false\:true\:false\:true\:false
 Mcu.Pin16=PB14
 Mcu.Pin13=PE9
 Mcu.Pin14=PE11
-Mcu.Pin19=PG6
+Mcu.Pin19=PD14
 ProjectManager.ComputerToolchain=false
 Mcu.Pin17=PD8
 Mcu.Pin18=PD9
 PD8.GPIO_Speed=GPIO_SPEED_FREQ_VERY_HIGH
 RCC.TIM3Freq_Value=72000000
+VP_TIM4_VS_ClockSourceINT.Mode=Internal
 NVIC.PriorityGroup=NVIC_PRIORITYGROUP_4
 Mcu.Pin11=PB0
 Mcu.Pin12=PF15
@@ -216,9 +228,10 @@ PG6.Signal=GPIO_Output
 ProjectManager.KeepUserCode=true
 Mcu.UserName=STM32F746ZGTx
 PD9.GPIOParameters=GPIO_ModeDefaultPP,GPIO_Speed,GPIO_PuPd
-PE11.GPIO_Label=DCC_L
+PE11.GPIO_Label=DCC_MAIN_L
 Dma.USART3_TX.1.MemInc=DMA_MINC_ENABLE
 PG6.Locked=true
+PD15.GPIO_Speed=GPIO_SPEED_FREQ_HIGH
 PC5.Locked=true
 RCC.SYSCLKSourceVirtual=RCC_SYSCLKSOURCE_PLLCLK
 PA7.GPIO_Mode=GPIO_MODE_AF_PP
@@ -265,7 +278,7 @@ FREERTOS.configUSE_STATS_FORMATTING_FUNCTIONS=1
 PH0/OSC_IN.Mode=HSE-External-Clock-Source
 PG11.GPIO_PuPd=GPIO_NOPULL
 RCC.HCLKFreq_Value=216000000
-Mcu.IPNb=11
+Mcu.IPNb=12
 RCC.I2SClocksFreq_Value=48000000
 RCC.PLLI2SRoutputFreq_Value=192000000
 ProjectManager.PreviousToolchain=STM32CubeIDE
@@ -287,18 +300,19 @@ Mcu.Pin1=PC14/OSC32_IN
 GPIO.groupedBy=Group By Peripherals
 Mcu.Pin2=PC15/OSC32_OUT
 PA9.GPIO_Mode=GPIO_MODE_INPUT
-PC1.GPIO_Mode=GPIO_MODE_AF_PP
 Mcu.Pin3=PH0/OSC_IN
+PC1.GPIO_Mode=GPIO_MODE_AF_PP
 Mcu.Pin4=PH1/OSC_OUT
 Mcu.Pin5=PC1
 RCC.HSE_VALUE=8000000
 Dma.USART3_RX.0.MemDataAlignment=DMA_MDATAALIGN_BYTE
 NVIC.DebugMonitor_IRQn=true\:0\:0\:false\:false\:true\:false\:true\:false
 Dma.USART3_TX.1.Mode=DMA_NORMAL
-Mcu.IP10=USB_OTG_FS
+Mcu.IP10=USART3
 NVIC.SysTick_IRQn=true\:15\:0\:false\:false\:false\:true\:true\:false
 PG13.GPIO_PuPd=GPIO_NOPULL
 RCC.PLLMUL=RCC_PLL_MUL9
+Mcu.IP11=USB_OTG_FS
 FREERTOS.configENABLE_BACKWARD_COMPATIBILITY=0
 PG11.GPIO_Speed=GPIO_SPEED_FREQ_VERY_HIGH
 PC4.GPIO_Speed=GPIO_SPEED_FREQ_VERY_HIGH
@@ -341,12 +355,14 @@ PB3.Locked=true
 PB7.GPIO_Speed=GPIO_SPEED_FREQ_LOW
 PA2.Locked=true
 RCC.I2SFreq_Value=192000000
+PD15.GPIO_Label=DCC_PROG_L
 PG7.Locked=true
 PA7.Mode=RMII
 PG7.Signal=GPIO_Input
 RCC.UART7Freq_Value=54000000
 ProjectManager.NoMain=false
 PC4.GPIO_PuPd=GPIO_NOPULL
+SH.S_TIM4_CH4.0=TIM4_CH4,PWM Generation4 CH4
 VP_SYS_VS_tim7.Mode=TIM7
 PC4.Signal=ETH_RXD0
 ProjectManager.DefaultFWLocation=true
@@ -369,9 +385,11 @@ PA13.Signal=SYS_JTMS-SWDIO
 PA9.Mode=Activate_VBUS
 PB14.PinState=GPIO_PIN_RESET
 SH.S_TIM1_CH1.0=TIM1_CH1,PWM Generation1 CH1
+VP_TIM4_VS_ClockSourceINT.Signal=TIM4_VS_ClockSourceINT
 ProjectManager.TargetToolchain=STM32CubeIDE
 FREERTOS.configUSE_TRACE_FACILITY=1
 Dma.USART3_TX.1.RequestParameters=Instance,Direction,PeriphInc,MemInc,PeriphDataAlignment,MemDataAlignment,Mode,Priority,FIFOMode
+SH.S_TIM4_CH3.0=TIM4_CH3,PWM Generation3 CH3
 PB7.GPIOParameters=GPIO_Speed,PinState,GPIO_PuPd,GPIO_Label,GPIO_ModeDefaultOutputPP
 VP_RNG_VS_RNG.Signal=RNG_VS_RNG
 PC5.GPIOParameters=GPIO_Speed,GPIO_PuPd,GPIO_Mode
@@ -383,6 +401,7 @@ PB14.GPIO_ModeDefaultOutputPP=GPIO_MODE_OUTPUT_PP
 PA1.Signal=ETH_REF_CLK
 PA7.GPIO_PuPd=GPIO_NOPULL
 SH.S_TIM1_CH2.ConfNb=1
+SH.S_TIM4_CH3.ConfNb=1
 RCC.VCOI2SOutputFreq_Value=384000000
 RCC.PLLSAIPCLKFreq_Value=192000000
 board=NUCLEO-F746ZG
@@ -401,6 +420,7 @@ PA1.GPIO_Speed=GPIO_SPEED_FREQ_VERY_HIGH
 PA10.GPIOParameters=GPIO_Speed,GPIO_PuPd,GPIO_Mode
 PF15.GPIO_Label=ENABLE_A
 PF15.Signal=GPIO_Output
+PD14.GPIO_Label=DCC_PROG_K
 RCC.UART5Freq_Value=54000000
 RCC.IPParameters=48MHZClocksFreq_Value,ADC12outputFreq_Value,ADC34outputFreq_Value,AHBFreq_Value,APB1CLKDivider,APB1Freq_Value,APB1TimFreq_Value,APB2CLKDivider,APB2Freq_Value,APB2TimFreq_Value,CECFreq_Value,CortexFreq_Value,EthernetFreq_Value,FCLKCortexFreq_Value,FamilyName,HCLKFreq_Value,HSE_VALUE,HSI_VALUE,I2C1Freq_Value,I2C2Freq_Value,I2C3Freq_Value,I2C4Freq_Value,I2SClocksFreq_Value,I2SFreq_Value,LCDTFToutputFreq_Value,LPTIM1Freq_Value,LSI_VALUE,MCO1PinFreq_Value,MCO2PinFreq_Value,MCOFreq_Value,PLLCLKFreq_Value,PLLI2SPCLKFreq_Value,PLLI2SQCLKFreq_Value,PLLI2SRCLKFreq_Value,PLLI2SRoutputFreq_Value,PLLM,PLLMCOFreq_Value,PLLMUL,PLLN,PLLQ,PLLQCLKFreq_Value,PLLQoutputFreq_Value,PLLSAIPCLKFreq_Value,PLLSAIQCLKFreq_Value,PLLSAIRCLKFreq_Value,PLLSAIoutputFreq_Value,PRESCALERUSB,RNGFreq_Value,RTCFreq_Value,RTCHSEDivFreq_Value,SAI1Freq_Value,SAI2Freq_Value,SDMMCFreq_Value,SPDIFRXFreq_Value,SYSCLKFreq_VALUE,SYSCLKSource,SYSCLKSourceVirtual,TIM15Freq_Value,TIM16Freq_Value,TIM17Freq_Value,TIM1Freq_Value,TIM20Freq_Value,TIM2Freq_Value,TIM3Freq_Value,TIM8Freq_Value,UART4Freq_Value,UART5Freq_Value,UART7Freq_Value,UART8Freq_Value,USART1Freq_Value,USART2Freq_Value,USART3Freq_Value,USART6Freq_Value,USBFreq_Value,VCOI2SOutputFreq_Value,VCOInputFreq_Value,VCOOutput2Freq_Value,VCOOutputFreq_Value,VCOSAIOutputFreq_Value,VcooutputI2S,WatchDogFreq_Value
 ProjectManager.AskForMigrate=true
@@ -408,7 +428,8 @@ Mcu.Name=STM32F746ZGTx
 PA2.Signal=ETH_MDIO
 Mcu.IP8=TIM1
 VP_FREERTOS_VS_CMSIS_V2.Signal=FREERTOS_VS_CMSIS_V2
-Mcu.IP9=USART3
+Mcu.IP9=TIM4
+PD14.Signal=S_TIM4_CH3
 Mcu.IP6=RNG
 Mcu.IP7=SYS
 ProjectManager.CoupleFile=true
@@ -435,6 +456,7 @@ PB7.Locked=true
 PA2.Mode=RMII
 NVIC.DMA1_Stream3_IRQn=true\:5\:0\:false\:false\:true\:true\:false\:true
 PA11.GPIO_Mode=GPIO_MODE_AF_PP
+NVIC.TIM4_IRQn=true\:5\:0\:false\:false\:true\:true\:true\:true
 PD9.Locked=true
 RCC.APB1Freq_Value=54000000
 ProjectManager.DeviceId=STM32F746ZGTx
