--- a/DCC_Simple.ioc
+++ b/DCC_Simple.ioc
@@ -1,6 +1,6 @@
 #MicroXplorer Configuration settings - do not modify
 PA11.GPIO_Speed=GPIO_SPEED_FREQ_VERY_HIGH
-FREERTOS.Queues01=dccPacketQueue,20,DCC_Packet *,0,Dynamic,NULL,NULL;commandQueue,72,char *,0,Dynamic,NULL,NULL
+FREERTOS.Queues01=dccMainPacketQueue,20,DCC_Packet *,0,Dynamic,NULL,NULL;commandQueue,72,char *,0,Dynamic,NULL,NULL;dccProgPacketQueue,2,DCC_Packet *,0,Dynamic,NULL,NULL
 PB13.GPIOParameters=GPIO_Speed,GPIO_PuPd,GPIO_Mode
 RCC.USART1Freq_Value=108000000
 RCC.TIM17Freq_Value=72000000
@@ -65,6 +65,7 @@ PH1/OSC_OUT.Locked=true
 PA8.Signal=USB_OTG_FS_SOF
 ETH.PHY_Name=LAN8742A_PHY_ADDRESS
 NVIC.PendSV_IRQn=true\:15\:0\:false\:false\:false\:true\:true\:false
+TIM4.Period=DCC_ONE_ARR
 PC15/OSC32_OUT.Locked=true
 ProjectManager.HalAssertFull=true
 VP_TIM1_VS_ClockSourceINT.Mode=Internal
@@ -88,7 +89,7 @@ FREERTOS.FootprintOK=true
 PB14.GPIOParameters=GPIO_Speed,PinState,GPIO_PuPd,GPIO_Label,GPIO_ModeDefaultOutputPP
 RCC.APB2CLKDivider=RCC_HCLK_DIV2
 RCC.CECFreq_Value=32786.88524590164
-RCC.APB1TimFreq_Value=108000000
+RCC.APB1TimFreq_Value=216000000
 FREERTOS.configGENERATE_RUN_TIME_STATS=1
 NVIC.BusFault_IRQn=true\:0\:0\:false\:false\:true\:false\:true\:false
 PB0.GPIO_ModeDefaultOutputPP=GPIO_MODE_OUTPUT_PP
@@ -110,12 +111,13 @@ PA2.GPIO_Mode=GPIO_MODE_AF_PP
 Dma.USART3_RX.0.Instance=DMA1_Stream1
 PB7.GPIO_PuPd=GPIO_NOPULL
 Dma.USART3_TX.1.MemDataAlignment=DMA_MDATAALIGN_BYTE
+TIM4.Pulse-PWM\ Generation3\ CH3=DCC_ONE_CCR
 RCC.PLLQoutputFreq_Value=48000000
 ProjectManager.ProjectFileName=DCC_Simple.ioc
 RCC.ADC12outputFreq_Value=72000000
 TIM1.OCPolarity_2=TIM_OCPOLARITY_LOW
-FREERTOS.Tasks01=defaultTask,24,256,StartDefaultTask,Default,NULL,Dynamic,NULL,NULL;dccTask,40,128,StartDccTask,Default,&dccPacketQueueHandle,Dynamic,NULL,NULL;commandTask,8,128,StartCommandTask,Default,NULL,Dynamic,NULL,NULL
-Mcu.PinsNb=39
+FREERTOS.Tasks01=defaultTask,24,256,StartDefaultTask,Default,NULL,Dynamic,NULL,NULL;dccTask,40,128,StartDccTask,Default,&dccQueues,Dynamic,NULL,NULL;commandTask,8,128,StartCommandTask,Default,NULL,Dynamic,NULL,NULL
+Mcu.PinsNb=40
 PA1.GPIO_Mode=GPIO_MODE_AF_PP
 PE11.GPIO_Speed=GPIO_SPEED_FREQ_HIGH
 PC13.Locked=true
@@ -125,12 +127,12 @@ RCC.UART8Freq_Value=54000000
 PB14.Locked=true
 RCC.APB1CLKDivider=RCC_HCLK_DIV4
 PD9.GPIO_ModeDefaultPP=GPIO_MODE_AF_PP
-ETH.IPParameters=MediaInterface,PHY_Name,PHY_Value,PhyAddress
+ETH.IPParameters=MediaInterface,PHY_Name,PHY_Value,PhyAddress,RxMode
 RCC.WatchDogFreq_Value=32000
 TIM1.AutoReloadPreload=TIM_AUTORELOAD_PRELOAD_ENABLE
 PA11.Locked=true
 PB14.GPIO_Speed=GPIO_SPEED_FREQ_LOW
-TIM4.IPParameters=Channel-PWM Generation3 CH3,Channel-PWM Generation4 CH4
+TIM4.IPParameters=Channel-PWM Generation3 CH3,Channel-PWM Generation4 CH4,Period,AutoReloadPreload,Pulse-PWM Generation3 CH3,Pulse-PWM Generation4 CH4,OCPolarity_4
 RCC.USART6Freq_Value=108000000
 PA9.Signal=USB_OTG_FS_VBUS
 VP_TIM1_VS_ClockSourceINT.Signal=TIM1_VS_ClockSourceINT
@@ -143,45 +145,48 @@ PG6.GPIOParameters=GPIO_Speed,PinState,GPIO_PuPd,GPIO_Label,GPIO_ModeDefaultOutp
 ProjectManager.LastFirmware=true
 PA7.GPIO_Speed=GPIO_SPEED_FREQ_VERY_HIGH
 VP_SYS_VS_tim7.Signal=SYS_VS_tim7
+TIM4.Pulse-PWM\ Generation4\ CH4=DCC_ONE_CCR
 PB13.GPIO_PuPd=GPIO_NOPULL
 PA1.Mode=RMII
 PG11.GPIO_Mode=GPIO_MODE_AF_PP
-Mcu.Pin37=VP_TIM1_VS_ClockSourceINT
-Mcu.Pin38=VP_TIM4_VS_ClockSourceINT
+Mcu.Pin37=VP_SYS_VS_tim7
+Mcu.Pin38=VP_TIM1_VS_ClockSourceINT
 RCC.PRESCALERUSB=RCC_USBCLKSOURCE_PLL_DIV1_5
-Mcu.Pin35=VP_RNG_VS_RNG
+Mcu.Pin35=VP_FREERTOS_VS_CMSIS_V2
 RCC.I2C1Freq_Value=54000000
-Mcu.Pin36=VP_SYS_VS_tim7
+Mcu.Pin36=VP_RNG_VS_RNG
 RCC.PLLI2SPCLKFreq_Value=192000000
 PG7.GPIO_Label=USB_In
+Mcu.Pin39=VP_TIM4_VS_ClockSourceINT
 RCC.RNGFreq_Value=48000000
-Mcu.Pin30=PG11
+Mcu.Pin30=PA14
 RCC.EthernetFreq_Value=216000000
-Mcu.Pin33=PB7
-Mcu.Pin34=VP_FREERTOS_VS_CMSIS_V2
-Mcu.Pin31=PG13
+Mcu.Pin33=PB3
+Mcu.Pin34=PB7
+Mcu.Pin31=PG11
 PC1.GPIO_Speed=GPIO_SPEED_FREQ_VERY_HIGH
-Mcu.Pin32=PB3
+Mcu.Pin32=PG13
 PA9.Locked=true
 NVIC.NonMaskableInt_IRQn=true\:0\:0\:false\:false\:true\:false\:true\:false
 PA13.Mode=Serial_Wire
 ProjectManager.FreePins=true
 RCC.PLLI2SQCLKFreq_Value=192000000
-Mcu.Pin26=PA11
-Mcu.Pin27=PA12
+Mcu.Pin26=PA10
+Mcu.Pin27=PA11
 RCC.RTCHSEDivFreq_Value=4000000
-Mcu.Pin24=PA9
+Mcu.Pin24=PA8
 ProjectManager.UnderRoot=true
-Mcu.Pin25=PA10
+Mcu.Pin25=PA9
+CORTEX_M7.IPParameters=CPU_ICache,CPU_DCache
 NVIC.TIM1_CC_IRQn=true\:5\:0\:false\:false\:true\:true\:true\:true
-Mcu.Pin28=PA13
-Mcu.Pin29=PA14
+Mcu.Pin28=PA12
+Mcu.Pin29=PA13
 PD14.GPIOParameters=GPIO_Speed,GPIO_Label
-Mcu.Pin22=PG7
+Mcu.Pin22=PG6
 ETH.MediaInterface=ETH_MEDIA_INTERFACE_RMII
-Mcu.Pin23=PA8
-Mcu.Pin20=PD15
-Mcu.Pin21=PG6
+Mcu.Pin23=PG7
+Mcu.Pin20=PD14
+Mcu.Pin21=PD15
 PA10.Locked=true
 NVIC.ForceEnableDMAVector=true
 PC14/OSC32_IN.Locked=true
@@ -191,23 +196,23 @@ PG11.Mode=RMII
 PA11.Signal=USB_OTG_FS_DM
 PC5.GPIO_Mode=GPIO_MODE_AF_PP
 ProjectManager.HeapSize=0x200
-Mcu.Pin15=PB13
+Mcu.Pin15=PE11
 NVIC.HardFault_IRQn=true\:0\:0\:false\:false\:true\:false\:true\:false
-Mcu.Pin16=PB14
-Mcu.Pin13=PE9
-Mcu.Pin14=PE11
-Mcu.Pin19=PD14
+Mcu.Pin16=PB13
+Mcu.Pin13=PF15
+Mcu.Pin14=PE9
+Mcu.Pin19=PD9
 ProjectManager.ComputerToolchain=false
-Mcu.Pin17=PD8
-Mcu.Pin18=PD9
+Mcu.Pin17=PB14
+Mcu.Pin18=PD8
 PD8.GPIO_Speed=GPIO_SPEED_FREQ_VERY_HIGH
 RCC.TIM3Freq_Value=72000000
 VP_TIM4_VS_ClockSourceINT.Mode=Internal
 NVIC.PriorityGroup=NVIC_PRIORITYGROUP_4
-Mcu.Pin11=PB0
-Mcu.Pin12=PF15
+Mcu.Pin11=PC5
+Mcu.Pin12=PB0
 PC5.GPIO_Speed=GPIO_SPEED_FREQ_VERY_HIGH
-Mcu.Pin10=PC5
+Mcu.Pin10=PC4
 PC15/OSC32_OUT.Signal=RCC_OSC32_OUT
 PA8.Mode=Activate_SOF_FS
 RCC.I2C2Freq_Value=54000000
@@ -241,8 +246,8 @@ PA9.GPIOParameters=GPIO_PuPd,GPIO_Mode
 PA2.GPIO_Speed=GPIO_SPEED_FREQ_VERY_HIGH
 PD9.GPIO_Speed=GPIO_SPEED_FREQ_VERY_HIGH
 PA11.GPIOParameters=GPIO_Speed,GPIO_PuPd,GPIO_Mode
-PA11.Mode=Device_Only
 PE9.GPIO_Speed=GPIO_SPEED_FREQ_HIGH
+PA11.Mode=Device_Only
 PB0.GPIO_Label=LED_Green
 PC14/OSC32_IN.Mode=LSE-External-Oscillator
 RCC.PLLI2SRCLKFreq_Value=192000000
@@ -270,6 +275,7 @@ TIM1.Prescaler=0
 Mcu.UserConstants=DCC_ZERO_ARR,43200;DCC_ZERO_CCR,21600;DCC_ONE_ARR,25058;DCC_ONE_CCR,12529;DCC_QUEUE_LEN,20
 PC1.GPIOParameters=GPIO_Speed,GPIO_PuPd,GPIO_Mode
 RCC.SDMMCFreq_Value=216000000
+PF5.Locked=true
 PB0.PinState=GPIO_PIN_RESET
 SH.GPXTI13.ConfNb=1
 ETH.PHY_Value=0
@@ -287,23 +293,24 @@ RCC.VcooutputI2S=48000000
 PD8.GPIOParameters=GPIO_ModeDefaultPP,GPIO_Speed,GPIO_PuPd
 PA8.GPIOParameters=GPIO_Speed,GPIO_PuPd,GPIO_Mode
 FREERTOS.configUSE_MALLOC_FAILED_HOOK=0
-Mcu.Pin6=PA1
-Mcu.Pin7=PA2
-Mcu.Pin8=PA7
-Mcu.Pin9=PC4
+Mcu.Pin6=PC1
+Mcu.Pin7=PA1
+Mcu.Pin8=PA2
+Mcu.Pin9=PA7
 RCC.VCOSAIOutputFreq_Value=384000000
 FREERTOS.IPParameters=Tasks01,Queues01,configUSE_MALLOC_FAILED_HOOK,configCHECK_FOR_STACK_OVERFLOW,configGENERATE_RUN_TIME_STATS,configUSE_TRACE_FACILITY,configUSE_STATS_FORMATTING_FUNCTIONS,INCLUDE_uxTaskGetStackHighWaterMark,configENABLE_BACKWARD_COMPATIBILITY,FootprintOK
 RCC.AHBFreq_Value=216000000
 RCC.TIM2Freq_Value=72000000
 Mcu.Pin0=PC13
 Mcu.Pin1=PC14/OSC32_IN
+NVIC.ETH_IRQn=true\:5\:0\:false\:false\:true\:true\:false\:true
 GPIO.groupedBy=Group By Peripherals
 Mcu.Pin2=PC15/OSC32_OUT
 PA9.GPIO_Mode=GPIO_MODE_INPUT
-Mcu.Pin3=PH0/OSC_IN
+Mcu.Pin3=PF5
 PC1.GPIO_Mode=GPIO_MODE_AF_PP
-Mcu.Pin4=PH1/OSC_OUT
-Mcu.Pin5=PC1
+Mcu.Pin4=PH0/OSC_IN
+Mcu.Pin5=PH1/OSC_OUT
 RCC.HSE_VALUE=8000000
 Dma.USART3_RX.0.MemDataAlignment=DMA_MDATAALIGN_BYTE
 NVIC.DebugMonitor_IRQn=true\:0\:0\:false\:false\:true\:false\:true\:false
@@ -321,6 +328,7 @@ PA14.Mode=Serial_Wire
 File.Version=6
 Dma.USART3_RX.0.PeriphDataAlignment=DMA_PDATAALIGN_BYTE
 PC13.GPIO_PuPd=GPIO_NOPULL
+ETH.RxMode=ETH_RXINTERRUPT_MODE
 PG7.GPIO_PuPd=GPIO_NOPULL
 PB7.Signal=GPIO_Output
 Dma.USART3_RX.0.FIFOMode=DMA_FIFOMODE_DISABLE
@@ -338,8 +346,10 @@ TIM1.Pulse-PWM\ Generation2\ CH2=DCC_ONE_CCR
 PC14/OSC32_IN.Signal=RCC_OSC32_IN
 ProjectManager.ToolChainLocation=
 RCC.LSI_VALUE=32000
+PF5.GPIO_Label=ENABLE_PROG
 USB_OTG_FS.VirtualMode=Device_Only
 Dma.USART3_RX.0.MemInc=DMA_MINC_ENABLE
+PF5.Signal=GPIO_Output
 PA10.GPIO_Speed=GPIO_SPEED_FREQ_VERY_HIGH
 RCC.TIM16Freq_Value=72000000
 Dma.Request1=USART3_TX
@@ -355,6 +365,8 @@ PB3.Locked=true
 PB7.GPIO_Speed=GPIO_SPEED_FREQ_LOW
 PA2.Locked=true
 RCC.I2SFreq_Value=192000000
+TIM4.AutoReloadPreload=TIM_AUTORELOAD_PRELOAD_ENABLE
+CORTEX_M7.CPU_ICache=Disabled
 PD15.GPIO_Label=DCC_PROG_L
 PG7.Locked=true
 PA7.Mode=RMII
@@ -364,6 +376,7 @@ ProjectManager.NoMain=false
 PC4.GPIO_PuPd=GPIO_NOPULL
 SH.S_TIM4_CH4.0=TIM4_CH4,PWM Generation4 CH4
 VP_SYS_VS_tim7.Mode=TIM7
+RCC.RCC_TIM_PRescaler_Selection=RCC_TIMPRES_ACTIVATED
 PC4.Signal=ETH_RXD0
 ProjectManager.DefaultFWLocation=true
 PD9.Signal=USART3_RX
@@ -395,6 +408,7 @@ VP_RNG_VS_RNG.Signal=RNG_VS_RNG
 PC5.GPIOParameters=GPIO_Speed,GPIO_PuPd,GPIO_Mode
 PF15.Locked=true
 RCC.USBFreq_Value=48000000
+PF5.GPIOParameters=GPIO_Label
 RCC.PLLSAIoutputFreq_Value=192000000
 PE11.Signal=S_TIM1_CH2
 PB14.GPIO_ModeDefaultOutputPP=GPIO_MODE_OUTPUT_PP
@@ -418,13 +432,14 @@ PC13.GPIOParameters=GPIO_PuPd,GPIO_Label,GPIO_ModeDefaultEXTI
 PB7.GPIO_ModeDefaultOutputPP=GPIO_MODE_OUTPUT_PP
 PA1.GPIO_Speed=GPIO_SPEED_FREQ_VERY_HIGH
 PA10.GPIOParameters=GPIO_Speed,GPIO_PuPd,GPIO_Mode
-PF15.GPIO_Label=ENABLE_A
+PF15.GPIO_Label=ENABLE_MAIN
 PF15.Signal=GPIO_Output
 PD14.GPIO_Label=DCC_PROG_K
 RCC.UART5Freq_Value=54000000
-RCC.IPParameters=48MHZClocksFreq_Value,ADC12outputFreq_Value,ADC34outputFreq_Value,AHBFreq_Value,APB1CLKDivider,APB1Freq_Value,APB1TimFreq_Value,APB2CLKDivider,APB2Freq_Value,APB2TimFreq_Value,CECFreq_Value,CortexFreq_Value,EthernetFreq_Value,FCLKCortexFreq_Value,FamilyName,HCLKFreq_Value,HSE_VALUE,HSI_VALUE,I2C1Freq_Value,I2C2Freq_Value,I2C3Freq_Value,I2C4Freq_Value,I2SClocksFreq_Value,I2SFreq_Value,LCDTFToutputFreq_Value,LPTIM1Freq_Value,LSI_VALUE,MCO1PinFreq_Value,MCO2PinFreq_Value,MCOFreq_Value,PLLCLKFreq_Value,PLLI2SPCLKFreq_Value,PLLI2SQCLKFreq_Value,PLLI2SRCLKFreq_Value,PLLI2SRoutputFreq_Value,PLLM,PLLMCOFreq_Value,PLLMUL,PLLN,PLLQ,PLLQCLKFreq_Value,PLLQoutputFreq_Value,PLLSAIPCLKFreq_Value,PLLSAIQCLKFreq_Value,PLLSAIRCLKFreq_Value,PLLSAIoutputFreq_Value,PRESCALERUSB,RNGFreq_Value,RTCFreq_Value,RTCHSEDivFreq_Value,SAI1Freq_Value,SAI2Freq_Value,SDMMCFreq_Value,SPDIFRXFreq_Value,SYSCLKFreq_VALUE,SYSCLKSource,SYSCLKSourceVirtual,TIM15Freq_Value,TIM16Freq_Value,TIM17Freq_Value,TIM1Freq_Value,TIM20Freq_Value,TIM2Freq_Value,TIM3Freq_Value,TIM8Freq_Value,UART4Freq_Value,UART5Freq_Value,UART7Freq_Value,UART8Freq_Value,USART1Freq_Value,USART2Freq_Value,USART3Freq_Value,USART6Freq_Value,USBFreq_Value,VCOI2SOutputFreq_Value,VCOInputFreq_Value,VCOOutput2Freq_Value,VCOOutputFreq_Value,VCOSAIOutputFreq_Value,VcooutputI2S,WatchDogFreq_Value
+RCC.IPParameters=48MHZClocksFreq_Value,ADC12outputFreq_Value,ADC34outputFreq_Value,AHBFreq_Value,APB1CLKDivider,APB1Freq_Value,APB1TimFreq_Value,APB2CLKDivider,APB2Freq_Value,APB2TimFreq_Value,CECFreq_Value,CortexFreq_Value,EthernetFreq_Value,FCLKCortexFreq_Value,FamilyName,HCLKFreq_Value,HSE_VALUE,HSI_VALUE,I2C1Freq_Value,I2C2Freq_Value,I2C3Freq_Value,I2C4Freq_Value,I2SClocksFreq_Value,I2SFreq_Value,LCDTFToutputFreq_Value,LPTIM1Freq_Value,LSI_VALUE,MCO1PinFreq_Value,MCO2PinFreq_Value,MCOFreq_Value,PLLCLKFreq_Value,PLLI2SPCLKFreq_Value,PLLI2SQCLKFreq_Value,PLLI2SRCLKFreq_Value,PLLI2SRoutputFreq_Value,PLLM,PLLMCOFreq_Value,PLLMUL,PLLN,PLLQ,PLLQCLKFreq_Value,PLLQoutputFreq_Value,PLLSAIPCLKFreq_Value,PLLSAIQCLKFreq_Value,PLLSAIRCLKFreq_Value,PLLSAIoutputFreq_Value,PRESCALERUSB,RCC_TIM_PRescaler_Selection,RNGFreq_Value,RTCFreq_Value,RTCHSEDivFreq_Value,SAI1Freq_Value,SAI2Freq_Value,SDMMCFreq_Value,SPDIFRXFreq_Value,SYSCLKFreq_VALUE,SYSCLKSource,SYSCLKSourceVirtual,TIM15Freq_Value,TIM16Freq_Value,TIM17Freq_Value,TIM1Freq_Value,TIM20Freq_Value,TIM2Freq_Value,TIM3Freq_Value,TIM8Freq_Value,UART4Freq_Value,UART5Freq_Value,UART7Freq_Value,UART8Freq_Value,USART1Freq_Value,USART2Freq_Value,USART3Freq_Value,USART6Freq_Value,USBFreq_Value,VCOI2SOutputFreq_Value,VCOInputFreq_Value,VCOOutput2Freq_Value,VCOOutputFreq_Value,VCOSAIOutputFreq_Value,VcooutputI2S,WatchDogFreq_Value
 ProjectManager.AskForMigrate=true
 Mcu.Name=STM32F746ZGTx
+TIM4.OCPolarity_4=TIM_OCPOLARITY_LOW
 PA2.Signal=ETH_MDIO
 Mcu.IP8=TIM1
 VP_FREERTOS_VS_CMSIS_V2.Signal=FREERTOS_VS_CMSIS_V2
@@ -455,6 +470,7 @@ TIM1.OCMode_PWM-PWM\ Generation2\ CH2=TIM_OCMODE_PWM1
 PB7.Locked=true
 PA2.Mode=RMII
 NVIC.DMA1_Stream3_IRQn=true\:5\:0\:false\:false\:true\:true\:false\:true
+CORTEX_M7.CPU_DCache=Disabled
 PA11.GPIO_Mode=GPIO_MODE_AF_PP
 NVIC.TIM4_IRQn=true\:5\:0\:false\:false\:true\:true\:true\:true
 PD9.Locked=true
