Corrected throttle check for NULL
Signed-off-by: Evili del Rio <evili.del.rio@gmail.com>

--- a/DCC_Simple.ioc
+++ b/DCC_Simple.ioc
@@ -45,6 +45,7 @@ PD8.Signal=USART3_TX
 PA1.GPIO_PuPd=GPIO_NOPULL
 PB13.Locked=true
 RCC.USART3Freq_Value=54000000
+NVIC.EXTI15_10_IRQn=true\:10\:0\:true\:false\:true\:true\:true\:true
 RCC.PLLSAIRCLKFreq_Value=192000000
 ProjectManager.ProjectBuild=false
 TIM4.Channel-PWM\ Generation3\ CH3=TIM_CHANNEL_3
@@ -327,7 +328,7 @@ RCC.VCOInputFreq_Value=2000000
 PA14.Mode=Serial_Wire
 File.Version=6
 Dma.USART3_RX.0.PeriphDataAlignment=DMA_PDATAALIGN_BYTE
-PC13.GPIO_PuPd=GPIO_NOPULL
+PC13.GPIO_PuPd=GPIO_PULLDOWN
 ETH.RxMode=ETH_RXINTERRUPT_MODE
 PG7.GPIO_PuPd=GPIO_NOPULL
 PB7.Signal=GPIO_Output
@@ -455,7 +456,7 @@ Dma.USART3_RX.0.Priority=DMA_PRIORITY_LOW
 PA1.Locked=true
 PA12.Mode=Device_Only
 KeepUserPlacement=false
-PC13.GPIO_ModeDefaultEXTI=GPIO_MODE_IT_RISING
+PC13.GPIO_ModeDefaultEXTI=GPIO_MODE_IT_FALLING
 PC15/OSC32_OUT.Mode=LSE-External-Oscillator
 PA13.Locked=true
 PA14.Signal=SYS_JTCK-SWCLK
