--- a/DCC_Simple.ioc
+++ b/DCC_Simple.ioc
@@ -7,6 +7,7 @@ RCC.TIM17Freq_Value=72000000
 PG6.PinState=GPIO_PIN_RESET
 PE11.GPIOParameters=GPIO_Speed,GPIO_Label
 PA8.GPIO_Mode=GPIO_MODE_AF_PP
+NVIC.TIM6_DAC_IRQn=true\:8\:0\:true\:false\:true\:true\:true\:true
 TIM1.IPParameters=Channel-PWM Generation1 CH1,Channel-PWM Generation2 CH2,Prescaler,Period,AutoReloadPreload,Pulse-PWM Generation1 CH1,OCMode_PWM-PWM Generation2 CH2,Pulse-PWM Generation2 CH2,OCPolarity_2
 PA10.GPIO_PuPd=GPIO_NOPULL
 RCC.PLLCLKFreq_Value=216000000
@@ -118,7 +119,7 @@ ProjectManager.ProjectFileName=DCC_Simple.ioc
 RCC.ADC12outputFreq_Value=72000000
 TIM1.OCPolarity_2=TIM_OCPOLARITY_LOW
 FREERTOS.Tasks01=defaultTask,24,128,StartDefaultTask,Default,NULL,Dynamic,NULL,NULL;dccTask,40,128,StartDccTask,Default,NULL,Dynamic,NULL,NULL;commandTask,8,256,StartCommandTask,Default,NULL,Dynamic,NULL,NULL
-Mcu.PinsNb=40
+Mcu.PinsNb=41
 PA1.GPIO_Mode=GPIO_MODE_AF_PP
 PE11.GPIO_Speed=GPIO_SPEED_FREQ_HIGH
 PC13.Locked=true
@@ -130,6 +131,7 @@ RCC.APB1CLKDivider=RCC_HCLK_DIV4
 PD9.GPIO_ModeDefaultPP=GPIO_MODE_AF_PP
 ETH.IPParameters=MediaInterface,PHY_Name,PHY_Value,PhyAddress,RxMode
 RCC.WatchDogFreq_Value=32000
+VP_TIM6_VS_ClockSourceINT.Signal=TIM6_VS_ClockSourceINT
 TIM1.AutoReloadPreload=TIM_AUTORELOAD_PRELOAD_ENABLE
 PA11.Locked=true
 PB14.GPIO_Speed=GPIO_SPEED_FREQ_LOW
@@ -143,6 +145,7 @@ PE9.GPIO_Label=DCC_MAIN_K
 PD8.Mode=Asynchronous
 PB14.Signal=GPIO_Output
 PG6.GPIOParameters=GPIO_Speed,PinState,GPIO_PuPd,GPIO_Label,GPIO_ModeDefaultOutputPP
+Mcu.Pin40=VP_TIM6_VS_ClockSourceINT
 ProjectManager.LastFirmware=true
 PA7.GPIO_Speed=GPIO_SPEED_FREQ_VERY_HIGH
 VP_SYS_VS_tim7.Signal=SYS_VS_tim7
@@ -242,7 +245,7 @@ PC5.Locked=true
 RCC.SYSCLKSourceVirtual=RCC_SYSCLKSOURCE_PLLCLK
 PA7.GPIO_Mode=GPIO_MODE_AF_PP
 PA12.GPIOParameters=GPIO_Speed,GPIO_PuPd,GPIO_Mode
-ProjectManager.functionlistsort=1-MX_GPIO_Init-GPIO-false-HAL-true,2-MX_DMA_Init-DMA-false-HAL-true,3-SystemClock_Config-RCC-false-HAL-false,4-MX_ETH_Init-ETH-false-HAL-true,5-MX_TIM1_Init-TIM1-false-HAL-true,6-MX_USART3_UART_Init-USART3-false-HAL-true,7-MX_USB_OTG_FS_PCD_Init-USB_OTG_FS-false-HAL-true,8-MX_RNG_Init-RNG-false-HAL-true,0-MX_CORTEX_M7_Init-CORTEX_M7-false-HAL-true
+ProjectManager.functionlistsort=1-MX_GPIO_Init-GPIO-false-HAL-true,2-MX_DMA_Init-DMA-false-HAL-true,3-SystemClock_Config-RCC-false-HAL-false,4-MX_ETH_Init-ETH-false-HAL-true,5-MX_TIM1_Init-TIM1-false-HAL-true,6-MX_USART3_UART_Init-USART3-false-HAL-true,7-MX_USB_OTG_FS_PCD_Init-USB_OTG_FS-false-HAL-true,8-MX_RNG_Init-RNG-false-HAL-true,9-MX_TIM4_Init-TIM4-false-HAL-true,10-MX_TIM6_Init-TIM6-false-HAL-true,0-MX_CORTEX_M7_Init-CORTEX_M7-false-HAL-true
 PA9.GPIOParameters=GPIO_PuPd,GPIO_Mode
 PA2.GPIO_Speed=GPIO_SPEED_FREQ_VERY_HIGH
 PD9.GPIO_Speed=GPIO_SPEED_FREQ_VERY_HIGH
@@ -285,7 +288,7 @@ FREERTOS.configUSE_STATS_FORMATTING_FUNCTIONS=1
 PH0/OSC_IN.Mode=HSE-External-Clock-Source
 PG11.GPIO_PuPd=GPIO_NOPULL
 RCC.HCLKFreq_Value=216000000
-Mcu.IPNb=12
+Mcu.IPNb=13
 RCC.I2SClocksFreq_Value=48000000
 RCC.PLLI2SRoutputFreq_Value=192000000
 ProjectManager.PreviousToolchain=STM32CubeIDE
@@ -316,11 +319,12 @@ RCC.HSE_VALUE=8000000
 Dma.USART3_RX.0.MemDataAlignment=DMA_MDATAALIGN_BYTE
 NVIC.DebugMonitor_IRQn=true\:0\:0\:false\:false\:true\:false\:true\:false
 Dma.USART3_TX.1.Mode=DMA_NORMAL
-Mcu.IP10=USART3
+Mcu.IP10=TIM6
 NVIC.SysTick_IRQn=true\:15\:0\:false\:false\:false\:true\:true\:false
+Mcu.IP12=USB_OTG_FS
 PG13.GPIO_PuPd=GPIO_NOPULL
 RCC.PLLMUL=RCC_PLL_MUL9
-Mcu.IP11=USB_OTG_FS
+Mcu.IP11=USART3
 FREERTOS.configENABLE_BACKWARD_COMPATIBILITY=0
 PG11.GPIO_Speed=GPIO_SPEED_FREQ_VERY_HIGH
 PC4.GPIO_Speed=GPIO_SPEED_FREQ_VERY_HIGH
@@ -328,12 +332,13 @@ RCC.VCOInputFreq_Value=2000000
 PA14.Mode=Serial_Wire
 File.Version=6
 Dma.USART3_RX.0.PeriphDataAlignment=DMA_PDATAALIGN_BYTE
-PC13.GPIO_PuPd=GPIO_PULLDOWN
+PC13.GPIO_PuPd=GPIO_NOPULL
 ETH.RxMode=ETH_RXINTERRUPT_MODE
 PG7.GPIO_PuPd=GPIO_NOPULL
 PB7.Signal=GPIO_Output
 Dma.USART3_RX.0.FIFOMode=DMA_FIFOMODE_DISABLE
 PG13.Mode=RMII
+TIM6.Period=65535
 PH1/OSC_OUT.Mode=HSE-External-Clock-Source
 Dma.RequestsNb=2
 PB0.Locked=true
@@ -378,7 +383,9 @@ PC4.GPIO_PuPd=GPIO_NOPULL
 SH.S_TIM4_CH4.0=TIM4_CH4,PWM Generation4 CH4
 VP_SYS_VS_tim7.Mode=TIM7
 RCC.RCC_TIM_PRescaler_Selection=RCC_TIMPRES_ACTIVATED
+TIM6.Prescaler=164
 PC4.Signal=ETH_RXD0
+VP_TIM6_VS_ClockSourceINT.Mode=Enable_Timer
 ProjectManager.DefaultFWLocation=true
 PD9.Signal=USART3_RX
 NVIC.DMA1_Stream1_IRQn=true\:5\:0\:false\:false\:true\:true\:false\:true
@@ -396,8 +403,10 @@ PA10.GPIO_Mode=GPIO_MODE_AF_PP
 PE9.GPIOParameters=GPIO_Speed,GPIO_Label
 PB0.GPIO_Speed=GPIO_SPEED_FREQ_LOW
 PA13.Signal=SYS_JTMS-SWDIO
+TIM6.AutoReloadPreload=TIM_AUTORELOAD_PRELOAD_ENABLE
 PA9.Mode=Activate_VBUS
 PB14.PinState=GPIO_PIN_RESET
+TIM6.IPParameters=AutoReloadPreload,Prescaler,Period
 SH.S_TIM1_CH1.0=TIM1_CH1,PWM Generation1 CH1
 VP_TIM4_VS_ClockSourceINT.Signal=TIM4_VS_ClockSourceINT
 ProjectManager.TargetToolchain=STM32CubeIDE
