* Fixed Register[cab] references to Register[reg]. * Fixed ARR autoreload bit. * Added continuous 1-bit or 0-bit signals.
Signed-off-by: Evili del Rio <evili.del.rio@gmail.com>

--- a/DCC_Simple.ioc
+++ b/DCC_Simple.ioc
@@ -33,7 +33,7 @@ NVIC.SVCall_IRQn=true\:0\:0\:false\:false\:false\:false\:true\:false
 PG7.GPIO_Mode=GPIO_MODE_INPUT
 RCC.I2C4Freq_Value=54000000
 PB13.GPIO_Mode=GPIO_MODE_AF_PP
-TIM2.IPParameters=Channel-PWM Generation1 CH1
+TIM2.IPParameters=Channel-PWM Generation1 CH1,AutoReloadPreload,Period,Pulse-PWM Generation1 CH1
 RCC.APB2TimFreq_Value=216000000
 PC4.GPIO_Mode=GPIO_MODE_AF_PP
 PH1/OSC_OUT.Signal=RCC_OSC_OUT
@@ -108,10 +108,11 @@ Dma.USART3_TX.1.MemDataAlignment=DMA_MDATAALIGN_BYTE
 RCC.PLLQoutputFreq_Value=48000000
 ProjectManager.ProjectFileName=DCC_Simple.ioc
 RCC.ADC12outputFreq_Value=72000000
-FREERTOS.Tasks01=defaultTask,24,128,StartDefaultTask,Default,NULL,Dynamic,NULL,NULL;dccTask,40,128,StartDccTask,Default,NULL,Dynamic,NULL,NULL;commandTask,8,256,StartCommandTask,Default,NULL,Dynamic,NULL,NULL
+FREERTOS.Tasks01=defaultTask,24,128,StartDefaultTask,Default,NULL,Dynamic,NULL,NULL;dccTask,40,128,StartDccTask,Default,NULL,Dynamic,NULL,NULL;commandTask,8,512,StartCommandTask,Default,NULL,Dynamic,NULL,NULL
 ADC1.Rank-0\#ChannelRegularConversion=1
 Mcu.PinsNb=40
 PA1.GPIO_Mode=GPIO_MODE_AF_PP
+TIM3.AutoReloadPreload=TIM_AUTORELOAD_PRELOAD_ENABLE
 ADC1.IPParameters=Rank-0\#ChannelRegularConversion,master,Channel-0\#ChannelRegularConversion,SamplingTime-0\#ChannelRegularConversion,NbrOfConversionFlag,Rank-1\#ChannelRegularConversion,Channel-1\#ChannelRegularConversion,SamplingTime-1\#ChannelRegularConversion,NbrOfConversion,ClockPrescaler
 PC13.Locked=true
 PC13.Signal=GPXTI13
@@ -125,6 +126,7 @@ SH.S_TIM2_CH1_ETR.ConfNb=1
 RCC.WatchDogFreq_Value=32000
 VP_TIM6_VS_ClockSourceINT.Signal=TIM6_VS_ClockSourceINT
 PA11.Locked=true
+TIM3.Pulse-PWM\ Generation1\ CH1=DCC_ONE_CCR
 PB14.GPIO_Speed=GPIO_SPEED_FREQ_LOW
 RCC.USART6Freq_Value=108000000
 PA9.Signal=USB_OTG_FS_VBUS
@@ -152,13 +154,14 @@ RCC.RNGFreq_Value=48000000
 Mcu.Pin30=PG11
 RCC.EthernetFreq_Value=216000000
 Mcu.Pin33=PB7
-TIM3.IPParameters=Channel-PWM Generation1 CH1
+TIM3.IPParameters=Channel-PWM Generation1 CH1,AutoReloadPreload,Pulse-PWM Generation1 CH1,Period
 Mcu.Pin34=VP_FREERTOS_VS_CMSIS_V2
 Mcu.Pin31=PG13
 PC1.GPIO_Speed=GPIO_SPEED_FREQ_VERY_HIGH
 Mcu.Pin32=PB3
 PA9.Locked=true
 NVIC.NonMaskableInt_IRQn=true\:0\:0\:false\:false\:true\:false\:true\:false
+TIM2.Period=DCC_ONE_ARR
 PA13.Mode=Serial_Wire
 ProjectManager.FreePins=true
 RCC.PLLI2SQCLKFreq_Value=192000000
@@ -207,6 +210,7 @@ Mcu.Pin11=PA6
 PC5.GPIO_Speed=GPIO_SPEED_FREQ_VERY_HIGH
 Mcu.Pin12=PA7
 Mcu.Pin10=PA5
+TIM2.AutoReloadPreload=TIM_AUTORELOAD_PRELOAD_ENABLE
 PC15/OSC32_OUT.Signal=RCC_OSC32_OUT
 PA8.Mode=Activate_SOF_FS
 RCC.I2C2Freq_Value=54000000
@@ -231,7 +235,7 @@ PG6.Locked=true
 PC5.Locked=true
 RCC.SYSCLKSourceVirtual=RCC_SYSCLKSOURCE_PLLCLK
 PA12.GPIOParameters=GPIO_Speed,GPIO_PuPd,GPIO_Mode
-ProjectManager.functionlistsort=1-MX_GPIO_Init-GPIO-false-HAL-true,2-MX_DMA_Init-DMA-false-HAL-true,3-SystemClock_Config-RCC-false-HAL-false,4-MX_ETH_Init-ETH-false-HAL-true,5-MX_TIM1_Init-TIM1-false-HAL-true,6-MX_USART3_UART_Init-USART3-false-HAL-true,7-MX_USB_OTG_FS_PCD_Init-USB_OTG_FS-false-HAL-true,8-MX_RNG_Init-RNG-false-HAL-true,9-MX_TIM4_Init-TIM4-false-HAL-true,10-MX_TIM6_Init-TIM6-false-HAL-true,0-MX_CORTEX_M7_Init-CORTEX_M7-false-HAL-true
+ProjectManager.functionlistsort=1-MX_GPIO_Init-GPIO-false-HAL-true,2-MX_DMA_Init-DMA-false-HAL-true,3-SystemClock_Config-RCC-false-HAL-false,4-MX_ETH_Init-ETH-false-HAL-true,5-MX_TIM1_Init-TIM1-false-HAL-true,4-MX_USART3_UART_Init-USART3-false-HAL-true,5-MX_USB_OTG_FS_PCD_Init-USB_OTG_FS-false-HAL-true,6-MX_RNG_Init-RNG-false-HAL-true,9-MX_TIM4_Init-TIM4-false-HAL-true,7-MX_TIM6_Init-TIM6-false-HAL-true,0-MX_CORTEX_M7_Init-CORTEX_M7-false-HAL-true
 PC0.GPIOParameters=GPIO_Label
 PA9.GPIOParameters=GPIO_PuPd,GPIO_Mode
 PA2.GPIO_Speed=GPIO_SPEED_FREQ_VERY_HIGH
@@ -276,6 +280,7 @@ Mcu.IPNb=13
 RCC.I2SClocksFreq_Value=48000000
 RCC.PLLI2SRoutputFreq_Value=192000000
 ProjectManager.PreviousToolchain=STM32CubeIDE
+TIM3.Period=DCC_ONE_ARR
 RCC.SPDIFRXFreq_Value=192000000
 RCC.VcooutputI2S=48000000
 SH.ADCx_IN3.ConfNb=1
@@ -379,6 +384,7 @@ boardIOC=true
 PA9.GPIO_PuPd=GPIO_NOPULL
 RCC.FamilyName=M
 Dma.USART3_RX.0.Mode=DMA_NORMAL
+TIM2.Pulse-PWM\ Generation1\ CH1=DCC_ONE_CCR
 FREERTOS.INCLUDE_uxTaskGetStackHighWaterMark=1
 PA10.GPIO_Mode=GPIO_MODE_AF_PP
 PB0.GPIO_Speed=GPIO_SPEED_FREQ_LOW
